210215 ~ 210216 | Programmers & 자바 객체 지향의 원리와 이해
- 2장 ~ 4장
- 최댓값과 최솟값

--- a/Interview/00. 프로그래밍 일반 개념.md
+++ b/Interview/00. 프로그래밍 일반 개념.md
@@ -16,16 +16,25 @@ https://jeong-pro.tistory.com/95?category=793347
 
 ## 클래스 vs 객체 vs 인스턴스?
 
-* 클래스: 현실 세계에 있는 것을 프로그래밍 언어로 표현한 것
-* 객체: 실제 사물을 나타내기 위한 것. 즉, 클래스의 메소드와 속성이 실제로 일어나기 위해서는 객체가 필요.
+* 객체: 세상에 존재하는 유일무이한 사물
+  * 속성: 명사로 표현되는 특성 / 값을 가질 수 있음
+  * 기능/행위(메서드): 동사로 표현되는 특성 / 수행 절차 또는 로직을 가질 수 있음
+* 클래스: 분류, 집합. 같은 속성과 기능을 가진 객체를 총칭하는 개념
+* 인스턴스: 클래스를 이용해 객체를 만들었다는 것을 강조하는 표현
 
 
 
 ## 객체 지향 원칙?
 
 - 이를 어디에 적용해보았는가?
+
 - 이 원칙을 적용하면 왜 재사용성이 높아지는가?
+
+  : 어느 한 클래스에 종속되어있는 코드가 아니라 공통 기능에 초점을 맞춰 모든 클래스에 적용할 수 있는 코드를 작성할 수 있기 때문에 재사용성이 높아진다.
+
 - 이 원칙을 적용하면 왜 유지보수성이 높아지는가?
+
+  : 중복 코드가 제거되어 관리해야 할 코드가 줄어들기 때문
 
 
 
