--- a/Interview/11. 인성 면접.md
+++ b/Interview/11. 인성 면접.md
@@ -84,8 +84,8 @@
 좋은 개발 문화를 가졌기 때문에 강요에 의한 것이 아닌 어떻게 하면 더 좋은 서비스를 만들 수 있을까에 대한 고민에서 나온 자발적 문화라고 생각합니다. 모든 사람들이 그러한 마인드를 가지고 일한다면 그렇게 만들 수 밖에 없는 매력이 분명 회사 안에 녹아들어 있다고 생각합니다. 도대체 그게 어떤 매력인지 굉장히 궁금했고, 만약 입사를 하게 된다면 저 또한 그 매력에 흠뻑 빠져 시간과 상관없이 적극적으로 업무를 할 것 같습니다.
 
 4. 돈을 조금 주는데 왜 지원함?(꼭 돈에 초점을 맞출 필요가 없음)
-  좋은 동료들
-  많은 사람들이 이용할 수 있는 어플이라 개발해보고 있었다.
+    좋은 동료들
+    많은 사람들이 이용할 수 있는 어플이라 개발해보고 있었다.
 
 
 
@@ -127,6 +127,18 @@
 
 
 ## 속도 vs 퀄리티?
+
+
+
+## 우리 회사에서는 레거시 유산이 많이 남아있는데 그럼 배울 것이 없는건가?
+
+: 근본 기술을 더 잘 배울수 있을 거다 / ~~한 기능에 대해서 로우한 코드도 볼 수 있을 거다 / 기본기가 더 탄탄해질 수 있다 / 더 불편한 코드를 사용하다 보니 객체지향이나 디자인 패턴 같은 것들에 선배들이 고민한 흔적들이 남아있을 거다 -> 배울 수 있는게 많다.
+
+
+
+## 내부 시스템은 무엇이 다른가?
+
+: 내부 시스템은 외부 시스템에 비해 요청마다 큰 데이터가 오가거나 요청의 복잡도가 크다. 명세서 역할을 할 테스트를 더 꼼꼼히 해야한다. 특정 지정일에 전 직원에게 문서를 뿌려야 되는데 이런걸 어떻게 해결해야 하나?
 
 
 
