210221 | 토비의 스프링
- 5장

--- a/토비의 스프링/6장. AOP.md
+++ b/토비의 스프링/6장. AOP.md
@@ -193,6 +193,25 @@
 ### 6.4.1 ProxyFactoryBean
 
 * ProxyFactoryBean: 프록시를 생성해서 빈 오브젝트로 등록해주는 팩토리 빈
+  
   * 순수하게 프록시 생성 작업만을 담당하며 부가기능은 MethodInterceptor 빈에 둘 수 있음
 * MethodInterceptor: ProxyFactoryBean이 생성한 프록시에 사용할 부가기능을 담아둘 수 있는 인터페이스
-  * ProxyFactoryBean으로부터 타깃 오브젝트에 대한 정보까지도 함께 제공받기 때문에 타깃 오브젝트에 상관없이 독립적으로 만들어질 수 있음
+  
+  * ProxyFactoryBean으로부터 타깃 오브젝트에 대한 정보(MethodInvocation)까지도 함께 제공받기 때문에 타깃 오브젝트에 상관없이 독립적으로 만들어질 수 있음
+  
+    → 싱글톤 빈으로 등록 가능
+
+#### 어드바이스: 타깃이 필요 없는 순수한 부가기능
+
+* MethodInvocation: 타깃 오브젝트에 적용하는 부가기능을 담은 오브젝트 = **어드바이스(advice)**
+  * 일종의 콜백 오브젝트
+  * proceed() → 타깃 오브젝트의 메서드를 내부적으로 실행
+* ProxyFactoryBean은 작은 단위의 템플릿/콜백 구조를 응용해서 적용했기 때문에 템플릿 역할을 하는 MethodInvocation을 싱글톤으로 두고 공유할 수 있다.
+* addAdvice() 메서드를 통해 ProxyFactoryBean에 여러 개의 MethodInterceptor를 추가할 수 있다.
+* ProxyFactoryBean은 인터페이스 자동검출 기능으로 타깃 오브젝트가 구현하고 있는 인터페이스 정보를 알아내고, 알아낸 인터페이스 모두를 구현하는 프록시를 생성한다.
+
+#### 포인트컷: 부가기능 적용 대상 메서드 선정 방법
+
+* Pointcut: 메서드 선정 알고리즘을 담은 오브젝트
+
+MethodInterceptor 오브젝트는 여러 프록시가 공유해서 사용할 수 있다. 그러기 위해서 MethodInterceptor 오브젝트는 타깃 정보를 갖고 있지 않도록 만들었다. 따라서, 트랜잭션 적용 메소드 패턴은 프록시마다 다를 수 있기 때문에 여러 프록시가 공유하는 MethodInterceptor에 특정 프록시에만 적용되는 패턴을 넣으면 문제가 된다.
