--- a/Interview/00. 프로그래밍 일반 개념.md
+++ b/Interview/00. 프로그래밍 일반 개념.md
@@ -4,6 +4,18 @@
 
 https://jeong-pro.tistory.com/95?category=793347
 
+ 0과 1로 대변되는 기계에 맞춰 사고하던 방식을 버리고 현실세계를 인지하는 방식으로 프로그램을 만드는 것
+
+→ 우리가 주변에서 사물을 인지 및 사고하는 방식대로 객체 단위의 프로그래밍이 가능
+
+* 장점
+  * 재사용성 용이
+  * 유지보수성 향상
+  * 대규모 프로젝트에 적합: 클래스 단위로 모듈화하기 적합하여 업무를 분담하는데 용이함
+* 단점
+  * 관리해야 할 객체가 많아짐
+  * 서비스를 설계할 때부터 많은 시간과 노력을 들어야 함
+
 
 
 ## 클래스/상태/메소드?
@@ -28,6 +40,9 @@ https://jeong-pro.tistory.com/95?category=793347
 
 - 이를 어디에 적용해보았는가?
 
+  - 개방 폐쇄 원칙 → 파일 서비스(로컬 파일 서비스 / AWS S3 파일 서비스)
+  - 단일 책임 원칙 → 로그인 체크 코드를 분리하여 하나의 새로운 aspect로 변환
+
 - 이 원칙을 적용하면 왜 재사용성이 높아지는가?
 
   : 어느 한 클래스에 종속되어있는 코드가 아니라 공통 기능에 초점을 맞춰 모든 클래스에 적용할 수 있는 코드를 작성할 수 있기 때문에 재사용성이 높아진다.
@@ -39,6 +54,14 @@ https://jeong-pro.tistory.com/95?category=793347
 
 
 ## 객체 지향의 4대 특성?
+
+* 캡슐화: 정보 은닉
+  * 접근 제어자: public, protected, default, private
+* 상속: 상위 클래스의 특성을 하위 클래스에서 상속(재사용)하고 거기에 더해 필요한 특성을 추가, 즉 확장해서 사용할 수 있다는 의미
+* 추상화: 구체적인 것을 분해해서 **관심 영역(애플리케이션 경계 / 컨텍스트)에 있는 특성만 가지고** 재조합하는 것
+* 다형성
+  * 오버라이딩: 같은 메서드 이름, **같은 인자 목록**으로 상위 클래스의 메서드를 **재정의**
+  * 오버로딩: 같은 메서드 이름, **다른 인자 목록**으로 다수의 메서드를 **중복 정의**
 
 - 이를 어디에 적용해보았는가?
 
@@ -52,17 +75,20 @@ https://jeong-pro.tistory.com/95?category=793347
 
 
 
-## Overloading vs Overriding?
-
-
-
 ## Call by Reference vs Call by Value?
+
+* Call By Value로 변수를 복사 → 저장하고 있는 값을 그 값 자체로 해석
+* Call By Reference로 변수를 복사 → 저장하고 있는 값을 주소로 해석
+
+즉, 어떤 방법이든 변수가 가진 값이 그대로 복사되며, 다만 그 값을 값 자체로 해석하느냐 아니면 주소값으로 해석하느냐의 차이일 뿐이다.
 
 
 
 ## 동등성 vs 동일성?
 
+동등성: 두 오브젝트가 같은 정보를 가지고 있다. -> equals() 메소드로 내용을 비교
 
+동일성: 두 오브젝트가 완전히 같은 오브젝트이다. -> == 연산자로 오브젝트가 저장되어 있는 주소 값을 비교
 
 
 
