--- a/Interview/01. Java.md
+++ b/Interview/01. Java.md
@@ -2,11 +2,88 @@
 
 ## Java vs Python?
 
+* Java: Run Fast
+  * 자바 컴파일러로 인해 바이트코드로 이루어진 파일이 생성된다. 바이트코드는 기계와 더 가까운 언어인 만큼 실행이 더 빨리된다.
+  * 많은 사람들이 사용하는 대형 서비스를 운영하는 회사에서 주로 사용
+* Python: Build Fast
+  * 같은 기능을 하는 메서드여도 파이썬의 코드가 훨씬 더 단순명료하다.
+  * 빠르게 서비스를 출시해야 하는 스타트업에서 주로 사용
+
+어떤 언어가 더 좋다라고 판단할 수는 없고, 사용할 목적에 따라 적절하게 선택해서 사용하면 된다.
+
 
 
 ## Java 7 / 8에서는 무엇이 달라졌는가?
 
 https://jeong-pro.tistory.com/209?category=793347
+
+### Java 7
+
+1. 숫자 표시 방법 보완
+   * 숫자 앞에 0을 넣으면 8진수, 0x를 넣으면 16진수로, 0b를 넣으면 2진수로 인식
+   * 숫자 사이에 _를 넣을 수 있어 가독성 향상
+2. switch문에서 String 사용
+   * switch-case문에서 사용하는 String이 null이면 NullPointerException 발생
+3. 제네릭을 쉽게 사용할 수 있는 Diamond
+   * 생성자에 타입을 명시해 줄 필요가 없음
+4. 예외 처리시 다중 처리 가능
+   * Exception을 조건식에서 파이프( | )로 연결
+5. AutoCloseable 인터페이스 추가
+   * 리소스와 함께 처리하는 try-with-resource문 사용 가능 → 별도로 close()를 호출할 필요 없음
+   * try의 소괄호 내에서 두 개 이상의 객체를 생성해야 한다면 ;으로 구분
+6. Fork/Join
+   * Fork: 작업을 여러 개로 나누는 것
+   * Join: 나누어서 작업한 결과를 모으는 것
+   * Work stealing: 할 일이 없는 Dequeue(양쪽이 끝오로 인식되는 큐)가 바쁜 Dequeue에 대기하고 있는 일을 가져가서 해주는 것
+7. NIO2
+   * 파일을 속성과 권한을 다룰 수 있으며, 심볼릭 링크까지 처리 가능
+   * Path: 파일과 경로에 대한 정보를 가지고 있는 인터페이스
+   * Files: Path 객체를 사용하여 파일을 통제하는데 사용
+8. WatchService
+   * 대상을 등록하면 이벤트가 발생했는지 계속해서 감시하는 일종의 스레드
+   * 이전에는 File클래스의 lastModified() 메서드로 변경된 파일의 시간을 가져와서 기존에 저장된 시간과 비교할 수 밖에 없었지만 파일이 변경되었는지 쉽게 확인 가능
+
+### Java 8
+
+1. 람다 표현식
+
+   * 기능적 인터페이스에만 적용 가능 (람다와 익명 클래스 간 전환 가능)
+   * `(매개 변수 목록) -> 처리식` / 처리식이 한 줄 이상일 때는 중괄호로 묶을 수 있음
+
+2. Funtional(기능적) 인터페이스: 하나의 메서드만 선언되어 있는 것
+
+   * @FunctionalInterface를 사용하면 해당 인터페이스에는 내용이 없는 하나의 메서드만 선언 가능
+
+     : 아무 표시 없이 메서드 하나만 선언해두면 다른 개발자들이 작업이 완료되지 않은 것으로 오해하여 기능을 더 추가할 수도 있기 때문
+
+3. Stream
+
+   * 배열, 컬렉션 인스턴스에 함수 여러 개를 조합해서 원하는 결과를 필터링하고 가공된 결과를 얻을 수 있음
+
+4. 메서드 참조(::)
+
+   * static 메서드 참조 `ContainingClass::staticMethodName`
+   * 특정 객체의 인스턴스 메서드 참조 `containingObject::instanceMethodName`
+   * 특정 유형의 임의의 객체에 대한 인스턴스 메서드 참조 `ContainingType::methodName`
+   * 생성자 참조 `ClassName::new`
+
+5. Optional: 객체를 편리하게 처리하기 위해서 만든 클래스
+
+   * “null이 될 수도 있는 객체”을 감싸고 있는 일종의 래퍼 클래스
+   * NPE를 유발할 수 있는 null을 직접 다루지 않아도 된다.
+   * 명시적으로 해당 변수가 null일 수도 있다는 가능성을 표현할 수 있어 null 체크를 직접 하지 않아도 된다.
+
+6. 인터페이스의 Default 메서드: 인터페이스에서 구현된 메서드
+
+   * 하위 호환성 → 인터페이스가 변경되면 이를 구현하는 모든 클래스들이 해당 메서드를 구현하도록 수정해야 하는데 default로 선언하면 그런 문제가 해결된다.
+
+7. 날짜 관련 클래스들 추가
+
+8. 병렬 배열 정렬: parallelSort()
+
+9. StringJoiner 추가
+
+   * 배열의 구성요소 사이에만 지정한 구분자를 넣어 문자열을 합칠 때 사용
 
 - `Spring5 Webflux` <- 이게 네티를 사용함
 
@@ -14,21 +91,158 @@ https://jeong-pro.tistory.com/209?category=793347
 
 ## Primitive type vs Reference type?
 
+#### 1. 기본 자료형
+
+* 값으로 바로 초기화
+
+* byte, short, int, long, float, double, char, boolean
+
+* **byte**
+
+  * byte형은 범위도 작은데 왜 만들어졌을까?
+
+    : 만약 데이터를 저장하는데 모두 int 타입이라면 단순히 숫자 하나를 표현하기 위해 32개의 0과 1을 표시하기 위한 공간이 필요하다. 즉, byte 대비 4배의 저장공간이 더 필요하게 된다. 그래서 많은 부분에서 데이터를 저장할 때 byte 값들을 조합하여 적은 공간에 많은 내용을 저장하도록 한다.
+
+* **short**: byte로 표현하기는 부족하고, int로 표현하기에는 너무 공간 낭비가 심할 때 사용
+
+* 위의 두 타입은 데이터를 저장할 목적이 아닌 계산하기 위한 목적으로 사용하면 수의 범위가 좁아 원하지 않는 결과가 나올 수 있음
+
+  * ex) byte -128에 1을 빼면 127이 됨
+
+    → -128을 이진수로 바꾸면 10000000이다. 가장 앞자리는 음수인지 양수인지 가리기 위한 부호라 숫자와 상관없다. 그래서 원래대로라면 10000000도 0이어야 하지만 어차피 0은 00000000이 있으므로 10000000은 -128로 정한 것이다. 이는 다른 타입들도 마찬가지이나 int나 long은 수의 범위가 일반 계산에서 사용되는 수보다 충분히 크기 때문에 int나 long을 주로 사용한다.
+
+* **float / double**
+
+  * 돈 계산과 같이 중요한 부분에서는 이 타입들을 사용해서는 안 됨
+
+    → float는 32비트, double은 64비트로 제공할 수 있는 범위를 넘어서면 그 값의 정확성을 보장하지 못하기 때문
+
+    ​    따라서, 이런 경우엔 `java.math,BigDecimal` 클래스 사용
+
+* **char**
+
+  * 정수형이므로 char 범위 내의 사이의 유니코드 번호로도 정의 가능
+  * 그러나 음수는 표현하지 못함
+
+#### 2. 참조 자료형
+
+* new를 사용해서 초기화
+* 기본 자료형을 제외한 나머지
+
 
 
 ## 인터페이스 vs 추상클래스?
 
 https://jeong-pro.tistory.com/82?category=793347
 
+### 추상 클래스
+
+: 추상 메서드를 하나라도 갖고 있는 클래스
+
+* 목적: 공통적인 기능을 하는 객체들의 추상화
+
+* 객체 생성 및 다중 상속 불가
+
+* private이나 protected 메서드/필드를 가질 수 있음
+
+* 하위 클래스에게 (추상) 메서드의 구현을 강제(오버라이딩 강제)
+
+  → 추상 메서드를 선언하여 **상속을 통해서 하위 클래스에서 완성하도록 유도**
+
+* 추상 클래스를 사용하는 이유
+
+  프로젝트가 커지면 여러 개발자가 참여하게 된다. 이때 공통적으로 작성되어야 할 내용들이 있을 것이다. 이러한 내용들을 개발자들마다 이름(메소드명, 속성명 등)을 다르게 정의한다면 유지보수 및 관리 등 문제가 발생될 것이다. 따라서 추상 클래스를 사용하는 이유는 **공통된 내용(속성이나** **메소드)을** **추출하여 통일된 내용으로 작성하도록 규격화**하는 것이다. 상속받은 클래스들은 자기 클래스의 필요한 메소드나 필드만 추가로 정의하고, 추상 메소드를 오버라이딩하여 클래스마다 다르게 실행될 로직을 작성해 주면 된다.
+
+  → **공통점을 찾아 추상화시켜서 사용하는 것**이 개발에서 이득일 때
+
+### 인터페이스
+
+: 만들고자 하는 클래스에 어떤 메서드들이 있어야 하는지 정의하는 것
+
+* 목적: 구현 객체가 같은 동작을 한다는 것을 보장하기 위한 목적
+
+* public 추상 메서드와 public 정적 상수만 가질 수 있음
+
+  → 메서드에 public, abstract, 속성에 public, static, final을 붙이지 않아도 자바 컴파일러가 자동으로 붙여줌
+
+  ​	(인터페이스는 그 자체로 인스턴스화될 수 없고, 메서드는 하위 메서드에서 무조건 구현해야 하므로)
+
+* 다중 상속 가능
+
+* 인터페이스는 특정 행위 개념으로 묶이는 것이기 때문에 해당 인터페이스를 구현한다면 동일한 동작이 보장됨
+
+  → 추상화된 요소로 클래스를 다룰 수 있어 결합도를 낮출 수 있음
+
+### 인터페이스와 추상 클래스를 사용하는 이유
+
+1. 설계시 선언해 두면 개발할 때 기능을 구현하는 데에만 집중할 수 있다.
+2. 개발자의 역량에 따른 메서드의 이름과 매개 변수 선언의 격차를 줄일 수 있다.
+3. 공통적인 인터페이스와 abstract 클래스를 선언해 놓으면, 선언과 구현을 구분할 수 있다.
+
 
 
 ## static inner 클래스 / inner 클래스 언제 쓰이는가?
+
+* Nested 클래스를 사용하는 이유
+
+  1. 한 곳에서만 사용되는 클래스를 논리적으로 묶어서 처리할 필요가 있을 때
+
+  2. 캡슐화가 필요할 때
+
+     ~~~ java
+     class Outer {
+         static class B {
+             ...
+         }
+         
+         class C {
+             ...
+         }
+     }
+     
+     public class A {
+         // static nested 클래스
+         Outer.B objectB = new Outer.B();	// B라는 클래스의 내부 구현을 숨길 수 있음
+         
+         // inner 클래스
+         Outer outer = new Outer();
+         outer.C objectC = outer.new C();
+     }
+     ~~~
+
+  3. 소스의 가독성과 유지보수성을 높이고 싶을 때
+
+외부 클래스에서 내부 클래스의 인스턴스 변수를 참조하고 싶다면 내부 클래스들의 객체를 생성한 후 참조가 가능하다.
+
+### static nested 클래스
+
+* 외부 클래스의 static 변수에만 접근 가능
+
+* 클래스를 묶기 위해 사용
+
+  → static nested 클래스는 다른 클래스에서 사용할 수 없으므로 보다 관련된 클래스 내부에 정의해 해당 클래스의 용도를 명확하게 하기 위함
+
+### inner 클래스
+
+* 하나의 클래스에서 어떤 공통적인 작업을 수행하는 클래스가 필요한데 다른 클래스에서는 그 클래스가 전혀 필요 없을 때 사용
+* 외부 클래스의 어떤 변수에도 접근 가능
+
+### 익명 클래스
+
+* 클래스를 많이 만들면 메모리가 많이 필요해지고, 애플리케이션을 시작할 때 더 많은 시간이 소요되므로 이를 극복하고자 간단한 방법으로 객체를 생성할 수 있도록 익명 클래스가 만들어짐
+* 이름이 없어 다른 클래스나 메서드에서 참조 불가
+* 외부 클래스의 어떤 변수에도 접근 가능
 
 - inner 클래스 중에서도 private/public 은 언제 쓰이나
 
 
 
 ## 접근제한자?
+
+* public: 모두가 접근 가능
+* protected: 상속 / 같은 패키지 내의 클래스에서 접근 가능
+* [default] : 같은 패키지 내의 클래스에서 접근 가능
+* private: 본인만 접근 가능
 
 
 
@@ -50,11 +264,20 @@ https://jeong-pro.tistory.com/82?category=793347
 
 ### 불변 객체
 
-: 한 번 생성되면 상태를 수정할 수 없는 객체 → 생성이 된 불변 객체는 신뢰할 수 있음
+: 한 번 생성되면 상태를 수정할 수 없는 객체
 
-<사용하는 이유>
+→ 객체가 참조하고 있는 값이 외부에서 임의로 변경되지 않는 객체 → 신뢰 가능
 
 * 멀티스레드 환경에서 스레드 동기화 문제 방지
+
+  : 멀티 쓰레드 환경에서 데이터가 불변 객체에 저장돼 있다면 여러 쓰레드에 의해서 특정 쓰레드의 데이터가 변경될 우려가 없다.
+
+* 다른 값으로 변경하고 싶은 경우, 기존 값을 수정할 수 없어 계속해서 새로운 객체를 생성하기 때문에 이로 인한 성능 저하가 발생할 수 있다. ex) String
+
+- 불변 객체 생성 방법
+  - 모든 필드를 `final` 로 선언
+  - 모든 필드를 `private` 로 선언
+  - `setter` 를 구현하지 않는다.
 
 
 
@@ -62,9 +285,11 @@ https://jeong-pro.tistory.com/82?category=793347
 
 ### 왜 equals()를 재정의할 때 hashcode()도 같이 재정의하는가?
 
+: hashcode()는 기본적으로 객체의 주소값으로 해시값을 생성한다. 그런데 hashcode()를 재정의하지 않아 equals()에서 동등하다고 정의한 객체들의 해시값이 다르게 나온다면 HashMap 등에서 객체를 찾는데 어려움을 겪게 된다.
+
 ### 왜 hashcode()를 제대로 정의하지 않으면 성능이 나빠지는가?
 
-
+: 해시값이 적절하게 분산되지 않으면 하나의 해시값에 객체들이 몰리게 된다. 해시값이 같으면 해당 해시값에 대해 LinkedList를 생성하여 같은 해시값을 가진 객체들을 저장한다. LinkedList는 객체를 찾을 때 Head 부터 순차적으로 접근할 수 밖에 없기 때문에 여기에 저장된 객체가 많을수록 객체를 찾기가 어려워진다.
 
 
 
@@ -72,11 +297,38 @@ https://jeong-pro.tistory.com/82?category=793347
 
 https://jeong-pro.tistory.com/85?category=793347
 
+* String
+
+  * immutable
+
+  * 기존 객체에 새로운 값을 더하는 것이 아니라 기존 값에 새로운 값이 더해진 새로운 객체를 생성함
+
+    (Java 5 이상은 컴파일러가 자동으로 StringBuilder로 변환)
+
+* StringBuffer
+
+  * mutable
+  * thread-safe
+  * String과 다르게 새로운 객체를 생성하지 않고, 기존에 있는 객체의 크기를 증가시키면서 값을 더함
+
+* StringBuilder
+
+  * mutable
+  * not-thread-safe
+  * String과 다르게 새로운 객체를 생성하지 않고, 기존에 있는 객체의 크기를 증가시키면서 값을 더함
+
 
 
 ## Generic?
 
 https://jeong-pro.tistory.com/100?category=793347
+
+: 클래스 내부에서 사용하는 데이터 타입을 클래스의 인스턴스를 생성할 때 결정하는 것
+
+* 제네릭을 사용하는 이유(=장점)
+  1. instanceof를 사용할 필요 없이 컴파일할 때 타입을 체크해서 에러를 사전에 잡을 수 있다.
+  2. 컴파일러가 타입캐스팅을 해주기 때문에 개발자가 편리하다.
+  3. 타입만 다르고 코드의 내용이 대부분 일치할 때, 코드의 재사용성이 좋아진다.
 
 
 
