--- a/Interview/08. Thread & IO.md
+++ b/Interview/08. Thread & IO.md
@@ -20,9 +20,38 @@
 
 ## 스레드의 상태변수에 대해 가시성이 보장되지 않는 이유?
 
+원래 스레드들은 변수를 자기 고유의 캐시에만 저장되어있어서 다른 스레드들은 그 값이 변경되었는지 모르는데
+
 
 
 ## Thread-Safe?
+
+- hread safe?
+
+: "쓰레드에 안전하다"는 것은 멀티 쓰레드 환경에서 어떤 변수나 메소드, 객체가 여러 스레드로부터 동시에 접근이 이루어져도 프로그램의 실행에 문제가 없음을 뜻한다. 예를 들어, 하나의 쓰레드가 어떤 메소드를 호출하여 실행하고 있는 동시에 다른 쓰레드가 같은 메소드를 호출하여 실행해도 각 쓰레드에서 결과가 올바르게 나와야 한다는 것을 뜻한다.
+
+이처럼 `Thread safe` 하게 코드를 짜려면 여러 가지 방법이 있는데 대표적으로 아래 3가지의 방식이 있다.
+
+1. `synchronized`
+
+: 여러 쓰레드가 같은 객체를 참조할 때, 해당 객체에 `synchronized`로 처리된 부분이 있다면 여러 쓰레드가 접근하여 그 부분을 수행하려 해도 한 번에 하나의 쓰레드만 수행할 수 있고, 다른 쓰레드들은 쓰레드가 실행을 마칠 때까지 기다려야 한다.
+
+- 사용 방법
+  - 메소드를 `synchronized`로 선언
+  - `synchronized` 블록
+
+2. Immutable Object
+
+: 불변 객체란 생성 후 그 상태를 바꿀 수 없는 객체를 뜻한다. 즉, 객체가 참조하고 있는 값이 외부에서 임의로 변경되지 않는 객체이다. 특히, 멀티 쓰레드 환경에서 데이터가 불변 객체에 저장돼 있다면 여러 쓰레드에 의해서 특정 쓰레드의 데이터가 변경될 우려가 없다. 그러나 다른 값으로 변경하고 싶은 경우, 기존 값을 수정할 수 없어 계속해서 새로운 객체를 생성하기 때문에 이로 인한 성능 저하가 발생할 수 있다.
+
+- 불변 객체 생성 방법
+  - 모든 필드를 `final` 로 선언
+  - 모든 필드를 `private` 로 선언
+  - `setter` 를 구현하지 않는다.
+
+3. Stateless Code
+
+: `Stateless` 하다는 것은 이전의 상태를 기억하지 않는다는 것이다. 여기서 상태란 객체의 상태, 즉 객체의 인스턴수 변수 값을 의미한다. 예를 들어, `stateless` 한 메소드나 함수는 입력 파라미터에 영향을 받지 않고, 같은 입력 값이라면 항상 같은 결과를 리턴하는 메소드나 함수를 가리킨다. 모든 쓰레드는 이러한 메소드를 안전하게 호출할 수 있으며 다른 메소드에서 개입하거나 다른 메소드의 반환된 결과로 바뀌지 않고 예상되는 결과를 얻을 수 있다. 멀티 쓰레드 환경의 에러는 대부분 여러 쓰레드들 간에 상태를 공유하기 때문에 발생하므로, `thread-safety` 를 이루려면 `stateless` 하게 코드를 짜야한다.
 
 
 
