--- a/Interview/09. Etc.md
+++ b/Interview/09. Etc.md
@@ -110,11 +110,63 @@ Redis는 Race Condition 문제를 해결하기 위해 기본적으로 싱글 스
 
 Travis CI와의 비교
 
+* 통합: 개인이 작업한 코드를 공용 작업 환경에 올리고 병합하는 과정
+  * 커밋(git) → 빌드(maven) → 테스트(junit5) → 통합
+  * 그리고 위의 통합 과정을 전반적으로 관리하고 자동화 시켜주는 것이 Jenkins같은 CI 툴
+* 배포: 통합 과정의 결과로 나온 산출물을 배포하는 것
+
+애자일 개발 방법론은 빠른 배포를 기반으로 하는데 CI는 애자일에서 필요한 속도를 얻는데 도움을 준다. 통합 과정은 위와 같이 많은 단계를 거쳐야 한다.
+
+* 애자일 개발 방법론: 빠르게 변화하는 고객의 요구사항에 대응하기 위해 짧은 주기로 프로젝트를 진행하는 것
+  * 요구 사항 분석이나 설계에 시간을 쓰지 않고 추상적인 계획만 세우고 이를 바탕으로 빠르게 개발
+  * 개발한 프로그램을 통합하고 테스트를 거쳐 배포
+  * 배포 후 고객이 만족하지 못하면 변경 사항을 추가하여 같은 단계로 진행
+
+고전적인 통합 방식의 경우, 개발자들이 각자 개발한 소스코드를 퀄리티 컨트롤(단위 테스트, 빌드 등)을 거치지 않고 커밋을 하고, 대부분의 기능 개발이 끝나게 되는 마지막에 통합을 하고 테스트를 진행한다. 따라서 버그 및 장애를 일으키는 이슈들이 쌓이게 되고, 통합을 하는 시점에 모두 해결해야 한다. 버그를 찾는데 굉장히 오랜 시간이 걸릴 수 있다.
+
+이를 해결하기 위해서 **통합을 짧은 주기로 자주!** 즉, 지속적으로 하게 되면 이러한 **문제 요소들을 조기 식별**할 수 있으며, 공용 레포지토리에는 신뢰성 있는 소스코드들만 남길 수 있게 되므로 **소프트웨어의 품질과 생산성이 향상**할 수 있습니다.
+
+지속적인 통합을 한다는 점에서 한 번에 많은 통합 과정을 진행하던 과거에 비해 훨씬 소스코드 **병합이 쉬워지고**, 병합 과정에서 **이슈를 빠르게 발견**할 수 있다는 점이 큰 장점입니다. 이를 통해 **소스코드의 높은 퀄리티를 유지**할 수 있습니다.
+
+ 또한 커밋만 하면 위의 통합 과정이 자동으로 실행되기 때문에 개발자들이 개발에만 신경 쓸 수 있는 환경을 구성할 수 있어서 **개발의 생산성을 높일 수 있다**는 장점이 있습니다.
+
+그래서 Jenkins를 사용한다.
+
 
 
 ## Docker를 왜 사용하는가?
 
 https://deveric.tistory.com/101
+
+Docker를 사용하지 않은 환경에서는 자신의 컴퓨터에서 돌려 본 후, 상용 서버로 애플리케이션을 배포했을 때 고려해야 할 사항이 정말 많습니다. 각종 환경 변수, OS 호환성, 하드웨어 차이에 따른 이슈 등등 많은 것들을 관리해야 했습니다. 이 때문에 로컬에서 잘 돌아가던 애플리케이션이 서버만 가면 시작조차 되지 않을 수도 있다.
+
+또 자신의 컴퓨터에 설정해 놓거나, 설치해 둔 프로그램은 사람마다 모두 다릅니다. 그렇기 때문에 제 컴퓨터에서 돌아가는 소스코드가 다른 사람의 컴퓨터에서도 멀쩡히 돌아간다는 보장을 받을 수 없었죠. 특정 컴퓨터의 환경을 맞춰야만 돌아가는 애플리케이션은 설치하기도, 배포하기도 까다롭고 어려웠죠.
+
+그래서 환경에 관계없는 애플리케이션 구동을 위해 Docker를 개발하게 되었고 이는 Immutable Infrastructure라는 개념을 만들었습니다.
+
+프로그램의 실행 환경과 어플리케이션을 같이 묶어서 Docker 엔진 위에만 올리면 OS, 환경과 상관없이 작동되도록 만드는 추상화 기법입니다. 그리고 이는 곧 어느 환경에서나 작동하는 애플리케이션이 됩니다. Immutable Infrastruecure는 다음과 같은 장점을 가지고 있습니다.
+
+개발자의 컴퓨터에서 잘 돌아가는 환경이 있다면, 이를 모두 묶어버려서 하나의 파일로 만들어버리고 이를 서버에 올리면 잘 돌아가지 않을까? 라는 고민에서 생긴 것이 바로 Docker Image입니다.
+
+Docker에서는 기본적으로 제공하는 Base Image가 있습니다. 여기에 애플리케이션에 필요한 라이브러리, 소스 등을 설치한 후 다시 이미지를 만들 수 있습니다. 일반적으로 이미지를 제작한다고 하면 이러한 베이스 이미지를 기초로 만든 이미지를 뜻합니다. Docker에서는 이 모든 환경을 하나의 이미지 파일로 묶어버립니다.
+
+이렇게 모든 환경을 묶어버린 이미지는 실행 환경에 영향을 받지 않습니다. Docker 엔진 위에서 실행하기만 한다면 개발자가 설계한 환경 위에서 정해진 라이브러리와 소스를 실행합니다. 제작된 이미지는 파일이기 때문에 이를 실행하기 위해서는 파일을 프로세스로 만들어야 합니다. 이를 위해 Docker에서는 이미지를 사용하여 Container를 제작하여 운영체제에서 돌아가는 프로세스를 만듭니다.
+
+#### 편리한 관리
+
+서비스 운영 환경을 이미지로 생성하여 이 이미지만 관리하면 됩니다. 이미지는 버전관리 시스템을 활용할 수 있습니다.
+
+#### 확장
+
+이미지 하나로 서버를 손쉽게 확장할 수 있습니다. 클라우드의 Auto Scaling기능과 연동하면 수평 확장이 가능합니다.
+
+#### 테스트
+
+어느 PC나 환경에서든 이미지를 실행하면 서비스 운영 환경과 같은 환경이 구성됩니다. 서버에 올린 다음 테스트하지 않아도 서버 환경과 유사하게 테스타가 가능합니다.
+
+#### 가벼움
+
+Docker는 OS를 분리하여 이미지로 제작합니다. 그렇기 때문에 가볍고 어디서든 실행 가능한 환경을 제공합니다.
 
 
 
