--- a/Interview/02. Spring.md
+++ b/Interview/02. Spring.md
@@ -44,6 +44,8 @@ https://ssoco.tistory.com/66
 
 ### Spring Boot를 사용하는 이유를 IoC와 연결지어서 말해보시오.
 
+먼저 @ComponentScan으로 @Controller, @Service, @Repository 등 어노테이션이 달린 클래스를 찾아 빈으로 생성합니다. 그 후 **@EnableAutoConfiguration에 의해 spring.factories 안에 들어있는 수많은 자동 설정들이 조건에 따라 적용이 되어 수 많은 Bean들이 생성되고, 자동 설정**이 되는 것입니다. Spring을 사용했다면 이 수 많은 bean과 설정 파일을 개발자가 직접 하나하나 등록해줘야 했을 것입니다. 하지만 SpringBoot의 Auto-configuration 기능을 이용하여, 프로젝트에서 필요한 bean들을 자동으로 등록 및 설정해줄 수 있게 되었습니다!
+
 
 
 ## Servlet?
@@ -313,6 +315,10 @@ https://deveric.tistory.com/86
 * Connection 관리를 계속해서 해야 함
 
 ### Connection Pool?
+
+**Connection이란 WAS와 데이터베이스 사이의 연결**을 의미합니다. 해당 클라이언트와 서버 사이의 연결을 위해서는 3-way-handshaking이라는 작업이 필요합니다.  **3-way-handshaking은 3번의 패킷 교환을 통해 소켓을 형성하고 통신을 준비하는 과정**을 의미하는데 이 과정이 쿼리를 요청할 때마다 반복적으로 실행된다면 이 또한 네트워크 구간에서 병목의 원인이 될 수 있습니다. 따라서 서버가 DB 접속하기 위해서 Connection을 반복적으로 생성하는 것은 그만큼 큰 비용이 드는 작업입니다.
+
+ 이를 해결하기 위해서 사용하는 것이 Connection Pool 방식입니다. Connection Pool 방식은 매번 소켓을 생성하는 것이 아니라 **미리 정해진 개수의 Connection을 생성해서 Pool에 보관하다가 재사용하여 데이터를 교환하는 방식**입니다. 이러한 방식은 이미 형성된 Connection을 재사용한다는 점에서 반복적인 3-way-handshaking 과정을 제거할 수 있으므로 훨씬 더 빠르게 통신할 수 있습니다.
 
 
 
