--- a/자바의 신/4장. 정보를 어디에 넣고 싶은데.md
+++ b/자바의 신/4장. 정보를 어디에 넣고 싶은데.md
@@ -1,6 +1,6 @@
-## 4장. 정보를 어디에 넣고 싶은데
+# 4장. 정보를 어디에 넣고 싶은데
 
-### 변수 
+## 변수 
 
 * 지역 변수
 
@@ -26,9 +26,9 @@
 
 
 
-### 자료형
+## 자료형
 
-#### 1. 기본 자료형
+### 1. 기본 자료형
 
 * 값으로 바로 초기화
 
@@ -63,7 +63,7 @@
 
 
 
-#### 2. 참조 자료형
+### 2. 참조 자료형
 
 * new를 사용해서 초기화
 * 기본 자료형을 제외한 나머지
