--- a/자바의 신/5장. 계산을 하고 싶어요.md
+++ b/자바의 신/5장. 계산을 하고 싶어요.md
@@ -1,6 +1,6 @@
-## 5장. 계산을 하고 싶어요
+# 5장. 계산을 하고 싶어요
 
-### 단항 연산자
+## 단항 연산자
 
 * ++ / --
 
@@ -21,7 +21,7 @@
 
 
 
-### 연산자 우선순위
+## 연산자 우선순위
 
 |             |       연산자       | 우선 순위 |
 | :---------: | :----------------: | :-------: |
@@ -31,7 +31,7 @@
 
 
 
-### 논리 연산자
+## 논리 연산자
 
 * && - & / || - |
   * 차이점: &&의 경우 좌측에 있는 연산이 false면 우측에 있는 연산을 수행하지 않는다.그러나 &는 좌측 연산 결과와 우측 연산 결과를 비교해야만 하기 때문에 모든 연산을 수행한다.
