--- a/Interview/01. Java.md
+++ b/Interview/01. Java.md
@@ -281,6 +281,15 @@ https://jeong-pro.tistory.com/82?category=793347
 
 
 
+## DTO vs VO?
+
+* DTO
+  * 데이터를 다른 서버로 전달하기 위한 목적
+* VO
+  * 데이터를 담아 두기 위한 목적
+
+
+
 ## equals()와 hashcode()에 대해서 설명해보시오.
 
 ### 왜 equals()를 재정의할 때 hashcode()도 같이 재정의하는가?
