--- a/자바 객체 지향의 원리와 이해/03. 자바와 객체 지향.md
+++ b/자바 객체 지향의 원리와 이해/03. 자바와 객체 지향.md
@@ -210,6 +210,7 @@ public class Driver {
 * 오버라이딩: 같은 메서드 이름, **같은 인자 목록**으로 상위 클래스의 메서드를 **재정의**
   * 하위 클래스가 재정의한 메서드를 알아서 호출해 줌으로써 형변환이나 instanceof 연산자를 써서 하위 클래스가 무엇인지 신경 쓰지 않아도 된다.
 * 오버로딩: 같은 메서드 이름, **다른 인자 목록**으로 다수의 메서드를 **중복 정의**
+  * 같은 역할을 하는 메서드는 같은 메서드 이름을 가져야 한다는 모토
   * 같은 기능이지만 인자만 다른 경우에도 하나의 메소드명으로 메서드를 정의할 수 있다.
 
 
