--- a/Interview/00. 프로그래밍 일반 개념.md
+++ b/Interview/00. 프로그래밍 일반 개념.md
@@ -62,6 +62,7 @@ https://jeong-pro.tistory.com/95?category=793347
 * 다형성
   * 오버라이딩: 같은 메서드 이름, **같은 인자 목록**으로 상위 클래스의 메서드를 **재정의**
   * 오버로딩: 같은 메서드 이름, **다른 인자 목록**으로 다수의 메서드를 **중복 정의**
+    * 같은 역할을 하는 메서드는 같은 메서드 이름을 가져야 한다는 모토
 
 - 이를 어디에 적용해보았는가?
 
