--- a/Real MySQL/03장 아키텍처/3.2 InnoDB 스토리지 엔진 아키텍처.md
+++ b/Real MySQL/03장 아키텍처/3.2 InnoDB 스토리지 엔진 아키텍처.md
@@ -101,3 +101,14 @@
 * 커밋하면 더 이상의 변경 작업 없이 지금의 상태를 영구적인 데이터로 만들고, 롤백하면 언두 영역에 있는 백업된 데이터를 버퍼 풀로 다시 복구한 후 언두 영역의 내용 삭제
 * 언두 영역의 백업 데이터는 이를 필요로 하는 트랜잭션이 없을 때 삭제됨
 * 트랜잭션이 길어지면 언두에서 관리하는 예전 데이터가 삭제되지 못하고 오랫동안 관리돼야 함
+
+
+
+
+
+## 3.2.7 잠금 없는 일관된 읽기
+
+: 특정 사용자가 레코드를 변경하고 아직 커밋을 수행하지 않았다 하더라도 변경 트랜잭션이 다른 사용자의 SELECT 작업을 방해하지 않는 것
+
+* 변경되기 전의 데이터를 읽기 위해 언두 로그 사용
+
