(docs) : Clean Code - [16장] 냄새와 휴리스틱-2

--- a/Clean Code/[17장] 냄새와 휴리스틱.md
+++ b/Clean Code/[17장] 냄새와 휴리스틱.md
@@ -309,3 +309,462 @@ public interface Stack {
 뚜렷한 목적 없이 변수, 상수, 함수를 당장 편한 위치에 넣어버린 결과다.
 
 변수, 상수, 함수를 선언할 때는 시간을 들여 올바른 위치를 고민한다.
+
+<br/>
+
+### G14: 기능 욕심
+
+클래스 메소드는 자기 클래스의 변수와 함수에 관심을 가져야지 다른 클래스의 변수와 함수에 관심을 가져서는 안된다.
+
+메소드가 다른 객체의 참조자와 변경자를 사용해 그 객체 내용을 조작한다면 메소드가 그 객체의 클래스의 범위를 욕심내는 것이다. 자신이 그 클래스에 속해 그 클래스 변수를 직접 조작하고 싶다는 뜻이다.
+
+기능 욕심은 한 클래스의 내부를 다른 클래스에 노출하므로 웬만하면 제거하는 편이 좋다.
+
+<br/>
+
+다른 클래스의 참조자/변경자를 사용하는 것이 허용되는 예시)
+
+```java
+@AllArgsConstructor
+public class HourlyEmployeeReport {
+	private HourlyEmployee employee;
+
+	String reportHours() {
+		return String.format(
+			"Name: %s\tHours:%d.%1d\n",
+			employee.getName(),
+			employee.getTenthsWorked()/10,
+			employee.getTenthWorked()%10
+		);
+	}
+}
+```
+
+- `HourlyEmployee` 클래스에서 보고서 형식을 알 필요가 없으므로 `reportHours()` 는 `HourlyEmploeeReport` 클래스에서 구현한다.
+- `reportHours()` 가 `HourlyEmployee` 클래스에 있다면 보고서 형식이 바뀔 때마다 `HourlyEmployee` 클래스 구조가 바뀔 수도 있다.
+
+<br/>
+
+### G15: 선택자 인수
+
+선택자 인수는 목적을 기억하기 어려울 뿐 아니라 각 선택자 인수가 여러 함수를 하나로 조합한다.
+
+boolean 타입의 인수 뿐 아니라 enum, int 등 함수 동작을 제어하려는 인수는 하나 같이 바람직하지 않다.
+
+일반적으로 인수를 넘겨 동작을 선택하는 대신 새로운 함수를 만드는 편이 좋다.
+
+<br/>
+
+### G16: 모호한 의도
+
+코드를 짤 때는 의도를 최대한 분명히 밝힌다.
+
+행을 바꾸지 않고 표현한 수식, 헝가리식 표기법, 매직 번호 등은 모두 저자의 의도를 흐린다.
+
+<br/>
+
+### G17: 잘못 지운 책임
+
+코드를 배치하는 위치도 최소 놀람의 원칙을 적용한다.
+
+코드는 독자가 자연스럽게 기대할 위치에 배치한다.
+
+<br/>
+
+때로는 독자에게 직관적인 위치가 아니라 개발자에게 편한 함수에 배치한다.
+
+ex) 직원이 근무한 총 시간을 보고서를 출력하는 함수가 필요하다 할 때,
+
+- 보고서를 출력하는 함수에서 계산하는 방법
+- 근무 시간을 입력 받는 코드에서 총계를 보관하는 방법 등을 고려할 수 있다.
+
+이때 함수 이름에 따라 결정할 수 있다.
+
+위의 예시에서 보고서 모듈에 `getTotalHours()` 와 근무시간을 입력받는 `saveTimeCard()` 가 있다면 `getTotalHours()` 에서 근무 총 시간을 계산하는 것이 명백하다.
+
+<br/>
+
+때로 성능을 높이고자 근무 시간을 입력받는 모듈에서 총계를 계산하는 편이 좋다고 판단할 수 있다.
+
+그러려면 이런 사실을 반영해 함수 이름을 제대로 지어야 한다.
+
+<br/>
+
+### G18: 부적절한 static 함수
+
+static 함수로 정의하기에 적절한 함수는
+
+- 메소드가 사용하는 정보는 특정 클래스/객체와 상관없이 넘겨받은 인수 뿐이어야 한다.
+- 메소드를 재정의할 가능성이 전혀 없어야 한다.
+
+
+```java
+HourlyPayCalculator.calculatePay(employee, overtimeRate);
+```
+
+위의 함수는 함수를 재정의할 가능성이 높기 때문에 static 함수보다는 Employee 클래스의 인스턴스 함수가 더 적절하다.
+
+<br/>
+
+조금이라도 의심스럽다면 인스턴스 함수로 정의한다.
+
+반드시 static 함수로 정의해야겠다면 재정의할 가능성은 없는지 꼼꼼히 따져본다.
+
+<br/>
+
+### G19: 서술적 변수
+
+프로그램 가독성을 높이는 가장 효과적인 방법 중 하나가 계산을 여러 단계로 나누고 중간 값으로 서술적인 변수 이름을 사용하는 방법이다.
+
+서술적인 변수 이름은 많을수록 더 좋다.
+
+<br/>
+
+### G20: 이름과 기능이 일치하는 함수
+
+이름만으로 분명하지 않아 구현을 살피거나 문서를 뒤적여야 한다면 더 좋은 이름으로 바꾸거나 아니면 더 좋은 이름을 붙이기 쉽도록 기능을 정리해야 한다.
+
+<br/>
+
+### G21: 알고리즘을 이해하라
+
+알고리즘을 안다고 생각하지만 실제는 코드가 돌아갈 때까지 이리저리 찔러보고 굴려본다.
+
+구현이 끝났다고 선언하기 전에 함수가 돌아가는 방식을 확실히 이해하는지 확인하라.
+
+테스트 케이스를 모두 통과한다는 사실만으로 부족하다.
+
+작성자가 알고리즘이 올바르다는 사실을 알아야 한다.
+
+알고리즘이 올바르다는 사실을 확인하고 이해하려면 기능이 뻔히 보일 정도로 함수를 깔끔하고 명확하게 재구성하는 방법이 최고다.
+
+<br/>
+
+### G22: 논리적 의존성은 물리적으로 드러내라
+
+한 모듈이 다른 모듈에 의존한다면 물리적인 의존성도 있어야 한다.
+
+논리적인 의존성만으로는 부족하다.
+
+의존하는 모듈이 상대 모듈에 대해 뭔가를 가정하면 안 된다.
+
+의존하는 모든 정보를 명시적으로 요청하는 편이 좋다.
+
+<br/>
+
+```java
+public class HourlyReporter {
+  private HourlyReportFormatter formatter;
+  private List<LineItem> page;
+  private final int PAGE_SIZE = 55;
+
+  public HourlyReporter(HourlyReportFormatter formatter) {
+    this.formatter = formatter;
+    page = new ArrayList<LineItem>();
+  }
+
+  public void generateReporter(List<HourlyEmployee> employees) {
+    for (HourlyEmployee e : employees) {
+      addLineItemToPage(e);
+      if (page.size() == PAGE_SIZE) {
+        printAndClearItemList();
+      }
+    }
+
+    if (page.size() > 0)
+      printAndClearItemList();
+  }
+
+  private void printAndClearItemList() {
+    formatter.format(page);
+    page.clear();
+  }
+
+  ...
+}
+```
+
+- HourlyReporter 클래스는 HourlyReportFormatter 클래스가 페이지 크기를 알 거라고 가정한다.
+
+  → HourlyReporter 클래스는 HourlyReportFormatter 클래스가 페이지 크기 55를 처리할 줄 안다는 사실에 의존한다.
+
+  → HourlyReportFormatter의 구현 클래스 중 하나가 이를 처리하지 못한다면 오류가 생긴다.
+
+  → 논리적 의존성
+
+<br/>
+
+```java
+public class HourlyReporter {
+  private HourlyReportFormatter formatter;
+  private List<LineItem> page;
+
+  public HourlyReporter(HourlyReportFormatter formatter) {
+    this.formatter = formatter;
+    page = new ArrayList<LineItem>();
+  }
+
+  public void generateReporter(List<HourlyEmployee> employees) {
+    for (HourlyEmployee e : employees) {
+      addLineItemToPage(e);
+      if (page.size() == formatter.getMaxSizePage()) {
+        printAndClearItemList();
+      }
+    }
+
+    if (page.size() > 0)
+      printAndClearItemList();
+  }
+
+  private void printAndClearItemList() {
+    formatter.format(page);
+    page.clear();
+  }
+
+  ...
+}
+```
+
+- HourlyReportFormatter에 getMaxPageSize()라는 메서드를 추가하면 물리적인 의존성으로 변한다.
+
+<br/>
+
+### G23: if/else 혹은 switch/case 문보다 다형성을 사용하라
+
+1. 대다수 개발자가 switch 문을 사용하는 이유는 그 상황에서 가장 올바른 선택이기 보다는 당장 손쉬운 선택이기 때문이다. → switch 문 선택 전 다형성을 먼저 고려
+2. 유형보다 함수가 더 쉽게 변하는 경우는 드물다. → 모든 switch 문을 의심해야 한다.
+
+<br/>
+
+선택 유형 하나에 switch 문 한 번만 사용한다.
+
+같은 선택을 수행하는 다른 코드에서는 다형성 객체를 생성해 switch 문을 대신한다.
+
+<br/>
+
+### G24: 표준 표기법을 따르라
+
+팀은 업계 표준에 기반한 구현 표준을 따라야 한다.
+
+구현 표준은 인스턴스 변수 이름을 선언하는 위치, 클래스/메소드/변수 이름을 정하는 방법, 괄호를 넣는 위치 등을 명시해야 한다.
+
+표준을 설명하는 문서는 코드 자체로 충분해야 한다.
+
+<br/>
+
+팀이 정한 표준은 팀원들 모두가 따라야 한다.
+
+<br/>
+
+### G25: 매직 넘버는 명명된 상수로 교체하라
+
+코드에서 숫자나 의미가 분명하지 않은 토큰 모두 그대로 사용하는 대신 명명된 상수 뒤로 숨기라는 의미다.
+
+어떤 상수는 이해하기 쉬우므로 코드 자체가 자명하다면 상수 뒤로 숨길 필요가 없다.
+
+<br/>
+
+### G26: 정확하라
+
+코드에서 뭔가를 결정할 때는 정확히 결정한다.
+
+결정을 내리는 이유와 예외를 처리할 방법을 분명히 알아야 한다.
+
+- ex)
+  - 검색 결과 중 첫 번째 결과만 유일한 결과라 짐작한다면 하나인지 확실히 확인한다.
+  - 통화를 사용할 땐 부동소수점이 아닌 정수를 사용하고 반올림을 올바로 처리한다.
+  - 병행 특성으로 인해 동시에 갱신할 가능성이 있다면 잠금 매커니즘을 구현한다.
+  - 모든 변수를 protected로 선언하면 안 된다.
+  - …
+
+<br/>
+
+### G27: 관례보다 구조를 사용하라
+
+설계 결정을 강제할 때는 규칙보다 관례를 사용한다.
+
+명명 관례보다는 구조 자체로 강제하면 더 좋다.
+
+- ex)
+  - enum 변수를 사용하는 switch/case 문보다 추상 메소드가 있는 기초 클래스가 더 낫다.
+
+    → switch/case 문을 매번 똑같이 구현하게 강제하기는 어렵지만 파생 클래스를 추상 메소드를 모두 구현해야 하기 때문이다.
+
+<br/>
+
+### G28: 조건을 캡슐화하라
+
+boolean 논리는 이해하기 어렵다. 조건의 의도를 분명히 밝히는 함수로 표현하라
+
+```java
+if (shouldBeDeleted(timer))    // GOOD
+
+if (timer.haseExpired() && !timer.isRecurrent())    // BAD
+```
+
+<br/>
+
+### G29: 부정 조건은 피하라
+
+부정 조건은 긍정 조건보다 이해하기 어렵다.
+
+```java
+if (buffer.shouldCompact())    // GOOD
+
+if (!buffer.shouldNotCompact())    // BAD
+```
+
+<br/>
+
+### G30: 함수는 한 가지만 해야 한다.
+
+함수는 한 가지만 수행하는 좀 더 작은 함수 여러 개로 나누는게 좋다.
+
+```java
+// Before
+public void pay() {
+	for (Employee e : employees) {
+		if (e.isPayday()) {
+			Money pay = e.calculatePay();
+			e.deliverPay(pay);
+		}
+	}
+}
+
+// After
+public void pay() {
+	for (Employee e : employees) {
+		payIfNecessary(e);	
+	}
+}
+
+private void payIfNecessary(Employee e) {
+	if (e.isPayday()) {
+		calculateAndDelieverPay(e);
+	}
+}
+
+private void calculateAndDeliverPay(Employee e) {
+	Money pay = e.calculatePay();
+	e.deliverPay(pay);
+}
+```
+
+<br/>
+
+### G31: 숨겨진 시간적인 결합
+
+시간적인 결합을 숨겨서는 안 된다.
+
+함수를 짤 때는 함수 인수를 적절히 배치해 함수가 호출되는 순서를 명백히 드러낸다.
+
+<br/>
+
+```java
+public class MoogDiver {
+  Gradient gradient;
+  List<Spline> splines;
+
+	// 시간적인 결합을 강제하지 않아 세 함수의 호출 순서를 바꿀 수 있다. -> 오류 발생
+  public void dive(String reason) {
+    saturateGradient();
+    reticulateSplines();
+    diveForMoog(reason);
+  }
+  ...
+}
+
+public class MoogDiver {
+  Gradient gradient;
+  List<Spline> splines;
+
+	// 각 함수의 결과가 다음 함수에 필요하는 구조이므로 시간적인 결합을 강제한다.
+  public void dive(String reason) {
+    Gradient gradient = saturateGradient();
+    List<Spline> splines = reticulateSplines(gradient);
+    diveForMoog(splines, reason);
+  }
+  ...
+}
+```
+
+함수는 복잡해지지만 의도적으로 추가한 구문적인 복잡성이 원래 있던 시간적인 복잡성을 드러낸 셈이다.
+
+<br/>
+
+### G32: 일관성을 유지하라
+
+코드 구조를 잡을 때는 이유를 고민하라. 그리고 그 이유를 코드 구조로 명백히 표현하라.
+
+구조에 일관성이 없어 보인다면 다른 사람들이 마음대로 바꿔버릴 수 있다.
+
+시스템 전반에 걸쳐 구조가 일관성이 있다면 남들도 일관성을 따르고 보존한다.
+
+<br/>
+
+### G33: 경계 조건을 캡슐화하라
+
+경계 조건은 한 곳에서 별도로 처리해야 한다.
+
+```java
+// Before
+if (level + 1 < tags.length)
+{
+  parts = new Parse(body, tags, level + 1, offset + endTag;
+  body = null;
+}
+
+// After
+int nextLevel = level + 1;
+if (nextLevel < tags.length)
+{
+  parts = new Parse(body, tags, nextLevel, offset + endTag;
+  body = null;
+}
+```
+
+<br/>
+
+### G34: 함수는 추상화 수준을 한 단계만 내려가야 한다.
+
+함수 내 모든 문장은 추상화 수준이 동일해야 한다.
+
+그리고 그 추상화 수준은 함수 이름이 의미하는 작업보다 한 단계만 낮아야 한다.
+
+<br/>
+
+ex) 수평자를 만드는 HTML 태그를 생성하는 함수 → 추상화 수준이 최소 두 개가 섞여 있다.
+
+1. 수평선에 크기가 있다
+2. hr 태그 자체의 문법: hr 태그를 만들 때 4개 이상의 연이은 - 기호를 감지해 hr 태그로 변환
+
+```java
+public String render() throws Exception {
+  StringBuffer html = new StringBuffer("<hr");
+	if(size > 0) {
+    html.append(" size=\"").append(size + 1).append("\"");
+	}
+  html.append(">");
+
+  return html.toString();
+}
+```
+<br/>
+
+```java
+// render() -> hr 태그만 생성
+public String render() throws Exception {
+	// HtmlTag -> HTML 문법 처리
+  HtmlTag hr = new HtmlTag("hr");
+  if (extraDashes > 0)
+    hr.addAttributes("size", hrSize(extraDashes));
+  return hr.html();
+}
+
+private String hrSize(int height) {
+  int hrSize = height + 1;
+  return String.format("%d", hrSize);
+}
+```
+
+추상화 수준을 분리하다 보면 코드가 정리되는 것은 물론, 앞서 드러나지 않았던 새로운 추상화 수준이 드러날 수 있다.
