--- a/Clean Code/[17장] 냄새와 휴리스틱.md
+++ b/Clean Code/[17장] 냄새와 휴리스틱.md
@@ -768,3 +768,319 @@ private String hrSize(int height) {
 ```
 
 추상화 수준을 분리하다 보면 코드가 정리되는 것은 물론, 앞서 드러나지 않았던 새로운 추상화 수준이 드러날 수 있다.
+
+<br/>
+
+### G35: 설정 정보는 최상위 단계에 둬라
+
+추상화 최상위 단계에 둬야 할 기본값 상수나 설정 관련 상수를 저차원 함수에 숨겨서는 안 된다.
+
+대신 고차원 함수에서 저차원 함수를 호출할 때 인수로 넘긴다.
+
+<br/>
+
+설정 관련 상수는 최상위 단계에 둔다. 그래야 변경하기도 쉽다.
+
+설정 관련 변수는 나머지 코드에 인수로 넘긴다.
+
+저차원 함수에 상수 값을 정의하면 안 된다.
+
+<br/>
+
+### G36: 추이적 탐색을 피하라
+
+일반적으로 한 모듈은 주변 모듈을 모를수록 좋다.
+
+A가 B를 사용하고 B가 C를 사용한다 하더라도 A가 C를 알아야 할 필요는 없다.
+
+<br/>
+
+**`디미터 법칙`** / **`부끄럼 타는 코드 작성`**
+
+- 자신이 직접 사용하는 모듈만 알아야 한다는 뜻
+
+<br/>
+
+내가 사용하는 모듈이 내게 필요한 서비스를 모두 제공해야 한다.
+
+원하는 메서드를 찾느라, 객체 그래프를 따라 시스템을 탐색할 필요가 없어야 한다.
+
+- `a.getB().getC()` X
+
+  → 설계와 아키텍처를 바꿔 B와 C 사이에 Q를 넣기가 쉽지 않다.
+
+  → 아키텍처가 굳어진다.
+
+- `a.c()` O
+
+<br/><br/>
+
+## 자바
+
+### J1: 긴 import 목록을 피하고 와일드카드를 사용하라
+
+패키지에서 클래스를 둘 이상 사용한다면 와일드카드를 사용해 패키지 전체를 가져오라.
+
+<br/>
+
+명시적인 import 문은 강한 의존성을 생성하지만 와일드카드는 그렇지 않다.
+
+와일드카드로 패키지를 지정하면 특정 클래스가 반드시 존재할 필요가 없기 때문이다.
+
+import 문은 패키지를 단순히 검색 경로에 추가하므로 모듈 간 결합성이 낮아진다.
+
+<br/>
+
+와일드카드 import 문은 때로 이름 충돌이나 모호성을 초래한다.
+
+이름이 같으나 패키지가 다른 클래스는 명시적인 import 문을 사용하거나 아니면 코드에서 클래스를 사용할 때 전체 경로를 명시한다.
+
+<br/>
+
+### J2: 상수는 상속하지 않는다
+
+상수를 인터페이스에 넣은 다음 그 인터페이스를 상속해 해당 상수를 사용하는 방법은 잘못된 방법이다.
+
+대신 static import를 사용하라.
+
+```java
+import static PayrollConstants.*;
+
+public class HourlyEmployee extends Employee {
+	...
+	
+	public Money calculatePay() {
+		int straightTime = Math.min(tenthsWorked, TENTHS_PER_WEEK);
+		int overTime = tenthsWorked - straightTime;
+		return new Money(hourlyRate * (tenthsWorked + OVERTIME_RATE * overTime));
+	}
+
+	...
+}
+```
+
+<br/>
+
+### J3: 상수 대 Enum
+
+Enum은 이름이 부여된 열거체에 속하기 때문에 코드에서 그 의미를 잃어버릴 수 없다.
+
+Enum은 메서드와 필드도 사용할 수 있다.
+
+<br/><br/>
+
+## 이름
+
+### N1: 서술적인 이름을 사용하라
+
+소프트웨어 가독성의 90%는 이름이 결정한다.
+
+그러므로 서술적인 이름을 신중하게 고른다.
+
+소프트웨어가 진화하면 의미도 변하므로 선택한 이름이 적합한지 자주 되돌아본다.
+
+<br/>
+
+신중하게 선택한 이름은 추가 설명을 포함한 코드보다 강력하다.
+
+신중하게 선택한 이름을 보고 독자는 모듈 내 다른 함수가 하는 일을 짐작한다.
+
+<br/>
+
+### N2: 적절한 추상화 수준에서 이름을 선택하라
+
+구현을 드러내는 이름은 피하라
+
+작업 대상 클래스나 함수가 위치하는 추상화 수준을 반영하는 이름을 선택하라.
+
+<br/>
+
+```java
+// Before
+// 문제점: 전화선이 아닌 전용선을 사용하는 모뎀이라면 전화번호가 아니라 포트 번호를 보낼 수도 있다.
+public interface Modem {
+	boolean dial(String phoneNumber);
+	boolean disconnect();
+	boolean send(char c);
+	char recv();
+	String getConnectedPhoneNumber();
+}
+
+// After
+public interface Modem {
+	boolean dial(String connectionLocator);
+	boolean disconnect();
+	boolean send(char c);
+	char recv();
+	String getConnectedLocator();
+}
+```
+
+<br/>
+
+### N3: 가능하다면 표준 명명법을 사용하라
+
+기존 명명법을 사용하는 이름은 이해하기 더 쉽다.
+
+- ex) 데코레이터 패턴을 활용한다면 장식하는 클래스 이름에 Decorator 라는 단어를 사용
+
+<br/>
+
+패턴은 한 가지 표준에 불과하다.
+
+- ex) 자바에서 문자열로 변환하는 함수는 toString 이라는 이름을 많이 쓰는데, 이런 이름은 관례를 따르는 편이 좋다.
+
+<br/>
+
+프로젝트에 유효한 의미가 담긴 이름을 많이 사용할수록 독자가 코드를 이해하기 쉬워진다.
+
+<br/>
+
+### N4: 명확한 이름
+
+함수나 변수의 목적을 명확히 밝히는 이름을 선택한다.
+
+```java
+private String doRename() throws Exception {
+	if (refactorReferences) {
+		renameReferences();
+	}
+	renamePage();
+
+	...
+}
+```
+
+→ 이름만으로는 함수가 어떤 일을 하는지 알기 어렵다. doRename 함수 안에 renamePage라는 함수가 있어 더욱 모호하다.
+
+<br/>
+
+`renamePageAndOptionallyAllReferences()` 라는 이름이 더 좋다.
+
+아주 길지만 서술성이 단점을 충분히 메꾼다.
+
+<br/>
+
+### N5: 긴 범위는 긴 이름을 사용하라
+
+이름 길이는 범위 길이에 비례해야 한다.
+
+범위가 5줄 안팎이라면 i나 j와 같은 변수 이름도 괜찮다.
+
+하지만 범위가 길어지면 이름을 정확하고 길게 지어야 한다.
+
+<br/>
+
+### N6: 인코딩을 피하라
+
+이름에 유형 정보나 범위 정보를 넣어서는 안된다.
+
+요즘에는 IDE에서 모든 정보를 제공하기 때문에 이름 앞에 m_ 이나 f와 같은 접두어가 필요없다.
+
+헝가리안 표기법의 오염에서 이름을 보호하라.
+
+<br/>
+
+### N7: 이름으로 부수 효과를 설명하라
+
+함수, 변수, 클래스가 하는 일을 모두 기술하는 이름을 사용한다.
+
+이름에 부수 효과를 숨기지 않는다.
+
+<br/>
+
+실제로 여러 작업을 수행하는 함수에 동사 하나만 사용하면 곤란하다.
+
+```java
+// Before
+public ObjectOutputStream getOos() throws IOException {
+	if (oos == null) {
+		oos = new ObjectOutputStream(socket.getOutputStream());
+	}
+
+	return oos;
+}
+
+// After
+public ObjectOutputStream createOrReturnOos() throws IOException {
+	if (oos == null) {
+		oos = new ObjectOutputStream(socket.getOutputStream());
+	}
+
+	return oos;
+}
+```
+
+<br/><br/>
+
+## 테스트
+
+### T1: 불충분한 테스트
+
+테스트 케이스는 잠재적으로 깨질 만한 부분을 모두 테스트해야 한다.
+
+테스트 케이스가 확인하지 않는 조건이나 검증하지 않는 계산이 있다면 그 테스트는 불완전하다.
+
+<br/>
+
+### T2: 커버리지 도구를 사용하라!
+
+커버리지 도구는 테스트가 빠뜨리는 공백을 알려준다.
+
+커버리지 도구를 사용하면 테스트가 불충분한 모듈, 클래스, 함수를 찾기가 쉬워진다.
+
+<br/>
+
+### T3: 사소한 테스트를 건너뛰지 마라
+
+사소한 테스트는 짜기 쉽다.
+
+사소한 테스트가 제공하는 문서적 가치는 구현에 드는 비용을 넘어선다.
+
+<br/>
+
+### T4: 무시한 테스트는 모호함을 뜻한다.
+
+때로는 요구사항이 불분명하기에 프로그램이 돌아가는 방식을 확신하기 어렵다.
+
+불분명한 요구사항은 테스트 케이스를 주석으로 처리하거나 테스트 케이스에 `@Ignore` 를 붙여 표현한다.
+
+선택 기준은 모호함이 존재하는 테스트 케이스가 컴파일이 가능한지 불가능한지에 달려있다.
+
+<br/>
+
+### T5: 경계 조건을 테스트하라
+
+경계 조건은 각별히 신경 써서 테스트한다.
+
+알고리즘의 중앙 조건은 올바로 짜놓고 경계 조건에서 실수하는 경우가 흔하다.
+
+<br/>
+
+### T6: 버그 주변은 철저히 테스트하라
+
+버그는 서로 모이는 경향이 있다.
+
+한 함수에서 버그를 발견했다면 그 함수를 철저히 테스트하는 편이 좋다.
+
+<br/>
+
+### T7: 실패 패턴을 살펴라
+
+때로는 테스트 케이스가 실패하는 패턴으로 문제를 진단할 수 있다.
+
+합리적인 순서로 정렬된 꼼꼼한 테스트 케이스는 실패 패턴을 드러낸다.
+
+<br/>
+
+### T8: 테스트 커버리지 패턴을 살펴라
+
+통과하는 테스트가 실행하거나 실행하지 않는 코드를 살펴보면 실패하는 테스트 케이스의 원인이 드러난다.
+
+<br/>
+
+### T9: 테스트는 빨라야 한다.
+
+느린 테스트 케이스는 실행하지 않게 된다. 일정이 촉박하면 느린 테스트 케이스를 제일 먼저 건너뛴다.
+
+그러므로 테스트 케이스가 빨리 돌아가게 최대한 노력한다.
