--- a/Clean Code/[부록A] 동시성2.md
+++ b/Clean Code/[부록A] 동시성2.md
@@ -367,3 +367,265 @@ public class WrappedHashTable(K, V> {
 ConcurrentHashMap<Integer, String> map = new ConcurrentHashMap<>();
 map.putIfAbsent(key, value);
 ```
+
+<br/>
+
+### 메서드 사이에 존재하는 의존성을 조심하라
+
+```java
+public class IntegerIterator implements Iterator<Integer> {
+	private Integer nextValue = 0;
+
+	public synchronized boolean hasNext() {
+		return nextValue < 100000;
+	}
+
+	public synchronized Integer next() {
+		if (nextValue == 100000)
+			throw new IteratorPastEndException();
+		return nextValue++;
+	}
+
+	public synchronized Integer getNextValue() {
+		return nextValue;
+	}
+}
+
+// IntegerIterator 클래스를 사용하는 예시 코드
+IntegerIterator iterator = new IntegerIterator();
+while (iterator.hasNext()) {
+	int nextValue = iterator.next();
+	...
+}
+```
+
+스레드 하나가 위의 코드를 실행한다면 아무 문제도 없다.
+
+하지만 스레드 두 개가 IntegerIterator 인스턴스 하나를 공유한다면, 맨 끝에 두 스레드가 서로를 간섭해 한 스레드가 최대 허용 값을 지나치는 바람에 예외가 발생할 가능성이 존재한다.
+
+→ 개별 메서드는 동기화 되었지만 클라이언트는 메서드 두 개를 함께 사용하기 때문
+
+<br/>
+
+다중 스레드 환경에서 발생하는 문제 중 위의 예제가 까다로운 이유는 정수 범위 끝에서 스레드가 서로 간섭할 때만 문제가 발생하기 때문이다.
+
+- 해결 방안
+  1. 실패를 용인한다.
+    - 다소 조잡한 방법
+
+<br/>
+
+  2. 클라이언트를 바꿔 문제를 해결한다. → 클라이언트-기반 잠금
+
+      ```java
+      IntegerIterator iterator = new IntegerIterator();
+      
+      while (true) {
+          int nextValue;
+      
+          // synchronized 키워드로 IntegerIterator 객체에 락을 건다.
+          synchronized (iterator) {
+              if (!iterator.hasNext())
+                  break;
+              nextValue = iterator.next();
+          }
+      
+          ...
+      }
+      ```
+
+     - 👍🏻: DRY 원칙을 위반하지만 다중 스레드 환경에 안전하지 못한 외부 도구를 사용한다면 필요할 수도 있다.
+     - 👎🏻: 서버를 사용하는 모든 프로그래머가 락을 기억해 객체에 걸었다 풀어야 하므로 다소 위험하다.
+
+<br/>
+
+  3. 서버를 바꿔 문제를 해결한다. 서버에 맞춰 클라이언트도 바꾼다. → 서버-기반 잠금 / 가장 바람직
+
+      ```java
+      // 서버
+      public class IntegerIteratorServerLocked {
+          private Integer nextValue = 0;
+      
+          public synchronized Integer getNextOrNull() {
+              if (nextValue < 100000)
+                  return nextValue++;
+              else
+                  return null;
+          }
+      }
+      
+      // 클라이언트
+      while (true) {
+          Integer nextValue = iterator.getNextOrNull();
+          
+          if (nextValue == null)
+              break;
+          
+          ...
+      }
+      ```
+
+     - 👍🏻: 클라이언트가 중복해서 락을 걸 필요가 없어진다.
+       - 클라이언트는 자유롭게 객체를 사용할 뿐더러 클라이언트에 잠금 코드를 추가할 필요도 없어진다.
+     - 👍🏻: 성능이 좋아진다.
+       - 단일스레드 환경으로 시스템을 배치할 경우 다중 스레드 서버를 단일 스레드 서버로 서버만 교체하면 오버헤드가 줄어든다.
+     - 👍🏻: 오류가 발생할 가능성이 줄어든다.
+     - 👍🏻: 스레드 정책이 하나다.
+       - 클라이언트-기반 잠금은 각 클라이언트가 정책을 구현하는 반면, 서버-기반 잠금은 서버 한 곳에서 정책을 구현한다.
+     - 👍🏻: 공유 변수 범위가 줄어든다.
+       - 공유 변수나 공유 변수가 잠긴 방식 모두 서버에 숨겨지기 때문에 클라이언트는 아예 모른다.
+       - 따라서, 문제가 생기면 살펴볼 곳이 적다.
+
+<br/>
+
+  만약 서버 코드에 손대지 못한다면
+
+  - 어댑터 패턴을 사용하여 잠금을 추가하거나
+
+      ```java
+      public class ThreadSafeIntegerIterator {
+          private IntegerIterator iterator = new IntegerIterator();
+        
+          public synchronized Integer getNextOrNull() {
+              if (iterator.hasNext())
+                  return iterator.next();
+              return null;
+          }
+      }
+      ```
+
+  - 스레드에 안전하며 인터페이스가 확장된 집합 클래스를 사용한다.
+
+<br/><br/>
+
+## 데드락
+
+```java
+상황) 개수가 한정된 자원 풀 두 개를 공유하는 웹 어플리케이션
+- 사용 자원
+	- 로컬 임시 DB 연결 풀
+	- 중앙 저장소 MQ 연결 풀
+- 수행 연산
+	- 생성: 중앙 저장소와 통신한 후 임시 DB에 작업 저장(중앙 저장소 연결 확보 -> 임시 DB 연결 확보)
+	- 갱신: 임시 DB에서 작업을 읽어 중앙 저장소로 전송(임시 DB 연결 확보 -> 중앙 저장소 연결 확보)
+```
+
+이때 풀 크기(10)보다 사용자 수가 많다면
+
+1. 사용자 10명이 생성을 시도해 중앙 저장소 연결 10개를 모두 확보한다. 모든 스레드가 중앙 저장소 연결을 확보한 이후 DB 연결을 확보하기 전에 중단된다.
+2. 사용자 10명이 갱신을 시도해 DB 연결 10개를 모두 확보한다. 모든 스레드가 DB 연결을 확보한 이후 중앙 저장소 연결을 확보하기 전에 중단된다.
+3. 생성 스레드 10개는 DB 연결을 기다린다. 갱신 스레드 10개는 중앙 저장소 연결을 기다린다.
+4. 데드락 발생. 시스템은 결코 복구되지 못한다.
+
+<br/>
+
+데드락은 다음 네 가지 조건을 모두 만족하면 발생한다. 네 조건 중 하나라도 깨버리면 발생하지 않는다.
+
+- 상호 배제
+- 잠금 & 대기
+- 선점 불가
+- 순환 대기
+
+<br/>
+
+### 상호 배제
+
+→ 여러 스레드가 한 자원을 공유하지만 그 자원은 여러 스레드가 동시에 사용하지 못하며 개수가 제한적인 상황
+
+ex) DB 연결, 쓰기용 파일 열기, 레코드 락, 세마포어 등
+
+<br/>
+
+- 조건 깨기
+  - 동시에 사용해도 괜찮은 자원을 사용한다. ex) AtomicInteger
+  - 스레드 수 이상으로 자원 수를 늘인다.
+  - 자원을 점유하기 전에 필요한 자원이 모두 있는지 확인한다.
+
+→ 달성하기 어려움
+
+<br/>
+
+### 잠금 & 대기
+
+→ 일단 스레드가 자원을 점유하면 나머지 필요 자원까지 모두 점유해 작업을 마칠 때까지 이미 점유한 자원을 내놓지 않는다.
+
+<br/>
+
+- 조건 깨기
+  - 대기하지 않는다.
+
+    → 각 자원을 점유하기 전에 확인해서 어느 하나라도 점유하지 못한다면 지금까지 점유한 자원을 모두 내놓고 처음부터 다시 시작한다.
+
+  - 문제점
+    1. 기아: 한 스레드가 계속해서 필요한 자원을 점유하지 못한다.
+    2. 라이브락: 여러 스레드가 한꺼번에 잠금 단계로 진입하는 바람에 계속해서 자원을 점유했다 내놨다를 반복한다.
+
+    → 두 경우 모두 작업 처리량을 크게 떨어뜨린다.
+
+      (기아는 CPU 효율을 저하시키는 반면 라이브락은 쓸데 없이 CPU만 많이 사용한다.)
+
+<br/>
+
+### 선점 불가
+
+→ 한 스레드가 다른 스레드로부터 자원을 빼앗지 못한다.
+
+자원을 점유한 스레드가 스스로 내놓지 않는 이상 다른 스레드는 그 자원을 점유하지 못한다.
+
+<br/>
+
+- 조건 깨기
+  - 다른 스레드로부터 자원을 뺏어온다.
+
+    → 필요한 자원이 잠겼다면 자원을 소유한 스레드에게 풀어달라 요청한다.
+
+    → 소유 스레드가 다른 자원을 기다리던 중이었다면 자신이 소유한 자원을 모두 풀어주고 처음부터 다시 시작한다.
+
+  - 장점
+    - 스레드가 자원을 기다려도 괜찮다.
+    - 처음부터 다시 시작하는 횟수가 줄어든다.
+  - 문제점
+    - 모든 요청을 관리하기가 어렵다.
+
+<br/>
+
+### 순환 대기
+
+![Untitled](./image/img_7.png)
+
+- 조건 깨기
+  - 데드락을 방지하는 가장 흔한 전략
+  - 모든 스레드가 일정 순서에 동의하고 그 순서로만 자원을 할당한다.
+  - 문제점
+    1. 자원을 할당하는 순서와 자원을 사용하는 순서가 다를지도 모른다.
+
+       → 제일 처음 할당한 자원을 나중에 쓰는 상황이 있을 수 있다.
+
+       → 자원을 필요 이상으로 점유한다.
+
+    2. 순서에 따라 자원을 할당하기 어렵다.
+
+<br/><br/>
+
+## 다중 스레드 코드 테스트
+
+다중 스레드 코드 이슈는 드물게 발생하기 때문에 대게 테스트로 발견하지 못한다.
+
+테스트를 조율해 한 장비에서 이슈를 발견했다 하더라도 다른 장비, 다른 OS, 다른 JVM으로 옮기면 테스트 값을 다시 조율해서 진행해야 한다.
+
+실패를 증명할 테스트 코드를 어떻게 작성할까? 어디를 살펴볼지 모른다면 코드에 버그가 있는지 없는지 어떻게 찾아낼까?
+
+<br/>
+
+1. 몬테 카를로 테스트
+  - 조율이 가능하게 유연한 테스트를 만들고 임의로 값을 조율하면서 계속 돌린다.
+  - 테스트가 실패한 조건은 신중하게 기록한다.
+2. 시스템을 배치할 플랫폼 전부에서 테스트를 반복해서 돌린다.
+  - 테스트가 실패 없이 오래 돌아갈수록 두 가지 중 하나일 확률이 높아진다.
+    - 실제 코드가 올바르다.
+    - 테스트가 부족해 문제를 드러내지 못한다.
+3. 부하가 변하는 장비에서 테스트를 돌린다.
+
+<br/>
+
+하지만 위와 같은 조치를 모두 취하더라도 코드에서 스레드 문제를 찾아낼 가능성은 매우 낮다.
