(docs) : 운영체제_쉬운코드 1강 내용 추가

--- a/운영체제_쉬운코드/01. 프로세스, 스레드, 멀티태스킹, 멀티스레딩, 멀티프로세싱, 멀티프로그래밍.md
+++ b/운영체제_쉬운코드/01. 프로세스, 스레드, 멀티태스킹, 멀티스레딩, 멀티프로세싱, 멀티프로그래밍.md
@@ -46,7 +46,7 @@
 - 단점
     - CPU 사용률이 좋지 않다.
 
-      ex) 현재 프로세스가 CPU를 잠깐 사용하고 있지 않아도 다른 프로세스들이 사용할 수 없음
+      ![Untitled](./image/img_01.png)
 
 <br/><br/>
 
@@ -70,7 +70,7 @@ ex) IO 작업이 발생하면 다른 프로세스가 CPU에서 실행된다.
 
 ### 단점
 
-- CPU 사용 시간이 길어지면 다른 프로세스는 계속 대기해야 한다.
+![Untitled](./image/img_02.png)
 
 <br/><br/>
 
@@ -80,7 +80,7 @@ ex) IO 작업이 발생하면 다른 프로세스가 CPU에서 실행된다.
 
 멀티프로그래밍의 단점을 해결하기 위해서 등장
 
-→ 프로세스는 한 번 CPU를 사용할 때 아주 짧은 시간(=quantum)만 CPU에서 실행한다.
+![Untitled](./image/img_03.png)
 
 <br/>
 
@@ -129,11 +129,24 @@ ex) IO 작업이 발생하면 다른 프로세스가 CPU에서 실행된다.
         - 스택을 가리키는 포인터들과 프로그램 카운터들이 스레드마다 따로 존재한다.
             - 프로그램 카운터(PC): 다음 실행돼야 할 명령어가 있는 메모리 주소를 가르킨다.
 
+<p>
+  <figure>
+    <img src="./image/img_04.png" width="60%">
+    <figcaption>싱글 스레드 메모리 구조</figcaption>
+  </figure>
+  <figure>
+    <img src="./image/img_05.png" width="60%">
+    <figcaption>싱글 스레드 메모리 구조</figcaption>
+  </figure>
+</p>
+
+
 <br/><br/>
 
 ## 멀티스레딩
 
 하나의 프로세스가 동시에 병렬적으로 여러 작업을 실행하는데 목적
+![Untitled](./image/img_06.png)
 
 <br/>
 
@@ -146,3 +159,38 @@ ex) IO 작업이 발생하면 다른 프로세스가 CPU에서 실행된다.
 ## 멀티프로세싱
 
 두 개 이상의 프로세서나 코어를 활용하는 시스템
+
+<br/><br/>
+
+## 예제
+
+1. 싱글-코어 CPU에 싱글-스레드 프로세스 두 개
+
+
+    | 멀티태스킹 | O |
+    | 멀티스레딩 | X → 싱글 스레드이기 때문 |
+    | 멀티프로세싱 | X → 싱글 코어기 때문 |
+2. 싱글-코어 CPU에 듀얼-스레드 프로세스 한 개
+
+
+    | 멀티태스킹 | O → CPU 하나를 두 개의 스레드가 경합해야 되기 때문 |
+    | 멀티스레딩 | O |
+    | 멀티프로세싱 | X |
+3. 듀얼-코어 CPU에 싱글-스레드 프로세스 두 개
+
+
+    | 멀티태스킹 | X → 코어 경합 없이 각 프로세스가 하나의 코어에서 실행되기 때문 |
+    | 멀티스레딩 | X |
+    | 멀티프로세싱 | O |
+4. 듀얼-코어 CPU에 듀얼-스레드 프로세스 한 개
+
+
+    | 멀티태스킹 | X → 코어 경합 없이 각 스레드가 하나의 코어에서 실행되기 때문 |
+    | 멀티스레딩 | O |
+    | 멀티프로세싱 | O |
+5. 듀얼-코어 CPU에 듀얼-스레드 프로세스 두 개
+
+
+    | 멀티태스킹 | O → 어떤 경우든 하나의 코어에서는 여러 스레드들이 경합하기 때문 |
+    | 멀티스레딩 | O |
+    | 멀티프로세싱 | O |
