(docs) : 운영체제_쉬운코드 2강 내용 추가

--- a/운영체제_쉬운코드/[02강] 컨텍스트 스위칭 의미와 종류.md
+++ b/운영체제_쉬운코드/[02강] 컨텍스트 스위칭 의미와 종류.md
@@ -7,11 +7,21 @@
 
 CPU/코어에서 실행 중이던 프로세스/스레드가 다른 프로세스/스레드로 교체되는 것
 
-오늘날의 컴퓨터에서는 하나의 프로세스는 하나의 스레드를 가진다.
+<br/>
 
-스레드가 CPU/코어의 기본 단위기 때문
+cf) 프로그램, 프로세스, 스레드
+* 프로세스는 실행 중인 프로그램을 의미한다.
+* 하나의 프로세스는 최소 하나 이상의 스레드를 가진다.
+* 스레드는 CPU 코어에서 실행 혹은 스케줄링되는 기본 단위다.
 
-그래서 프로세스에서 프로세스로 교체다는 말은 사실 어떤 프로세스 안에 실행되는 스레드가 다른 프로세스 안에 실행되는 스레드로 바뀐다는 말이다.
+<br/>
+
+* 프로그램이 메모리에 올라가서 실행 중인 상태가 된 것을 프로세스라 부르고
+* 한 프로세스는 최소 하나 이상의 스레드들로 동작하게 되며,
+* 이때 이 스레드들 각각이 CPU 코어에서 실행된다고 볼 수 있다.
+
+
+그래서 프로세스에서 프로세스로 교체된다는 말은 사실 어떤 프로세스 안에 실행되는 스레드가 다른 프로세스 안에 실행되는 스레드로 바뀐다는 말이다.
 
 <br/>
 
@@ -62,6 +72,10 @@ cf) CPU 레지스터
 
 다른 프로세스끼리 스위칭(프로세스 컨텍스트 스위칭)인지 같은 프로세스의 스레드들끼리 스위칭(스레드 컨텍스트 스위칭)인지에 따라 다르다.
 
+CPU 코어에서 실행되는 단위가 스레드이기 때문에 프로세스 컨텍스트 스위칭도 당연히 스레드 간의 컨텍스트 스위칭으로 동작한다.
+
+그러나 프로세스 컨텍스트 스위칭은 서로 다른 프로세스에 속한 스레드 간의 컨텍스트 스위칭이 발생하는 것이다.
+
 <br/>
 
 ### 공통점
@@ -83,23 +97,42 @@ cf) CPU 레지스터
 <br/>
 
 ### 차이점
+컨텍스트 스위칭은 아래 작업들을 수행한다.
+- 현재 실행 중인 프로세스/스레드의 컨텍스트 백업
+  - ex) CPU 레지스터 값들, 어디까지 실행됐는지 등
+- CPU 캐시를 비움(flush)
+  - CPU 마다 동작 방식이 다름. 비우지 않는 경우도 있음 
+- TLB를 비움
+  - TLB(table lookaside buffer)
+    - 가상 메모리 주소와 실제 물리 메모리 주소의 매핑 정보를 저장
+- MMU 설정 변경
+  - MMU(memory management unit)
+    - CPU가 메모리에 접근하는 것을 관리
+    - 가상 메모리와 실제 물리 메모리 사이에서 주소 변환
 
-프로세스 컨텍스트 스위칭은 가상 메모리 주소 관련 처리를 추가로 수행
+<br/>
+스레드 컨텍스트 스위칭은 1번만 수행한다.
 
-- MMU를 새로운 프로세스의 메모리 주소를 바라보게 수정 해야 함
-    - MMU
-- TLB도 완전히 비워줘야 함
-    - TLB: 가상 메모리 주소와 실제 물리 메모리 주소의 매핑 정보를 저장
+그러나 프로세스 컨텍스트 스위칭은 가상 메모리 주소 관련 처리(2, 3, 4번)를 추가로 수행한다.
 
-만약 수행하지 않으면 컨텍스트 스위칭 이전의 프로세스의 메모리 영역으로 잘못 접근하게 될 수도 있음
+(만약 수행하지 않으면 컨텍스트 스위칭 이전의 프로세스의 메모리 영역으로 잘못 접근하게 될 수도 있음)
 
 <br/><br/>
 
 ## 스레드 컨텍스트 스위칭이 더 빠른 이유
 
-→ 같은 메모리 공간을 공유하기 때문에 메모리 주소 관련 처리는 하지 않기 때문
+서로 다른 프로세스는 서로 다른 메모리 주소 공간을 가진다.
 
-- CPU 상태 정보만 교체하면 됨
+따라서 프로세스 컨텍스트 스위칭을 할 때 새로 실행되는 프로세스가 기존에 실행되던 프로세스의 메모리 주소 공간에 침범하면 안 되기 때문에 위의 모든 컨텍스트 스위칭 작업을 수행하는 것이다.
+
+특히 CPU 캐시와 TLB를 비워주는 작업이 시간을 꽤 잡아먹기 때문에 프로세스 컨텍스트 스위칭은 스레드 컨텍스트 스위칭에 비해서 오래 걸린다.
+
+<br/>
+
+반면 스레드 컨텍스트 스위칭의 경우에는 같은 메모리 공간을 공유하기 때문에 더 빨리 끝난다.
+
+-> 메모리 주소 관련 처리는 필요없이 CPU 상태 정보만 교체하면 됨
+
 
 <br/><br/>
 
