(docs) : 운영체제_쉬운코드 2강 내용 추가 - CPU 레지스터

--- a/운영체제_쉬운코드/[02강] 컨텍스트 스위칭 의미와 종류.md
+++ b/운영체제_쉬운코드/[02강] 컨텍스트 스위칭 의미와 종류.md
@@ -34,6 +34,10 @@ cf) 프로그램, 프로세스, 스레드
 <br/>
 
 cf) CPU 레지스터
+* CPU 내부의 작은 임시 저장장치
+* 프로그램 속 명령어와 데이터는 실행 전후로 레지스터에 저장
+* CPU마다 레지스터 종류 및 개수 등이 다 다르다.
+  
 
 <br/><br/>
 
