--- a/운영체제_쉬운코드/[01강] 꼬리 질문.md
+++ b/운영체제_쉬운코드/[01강] 꼬리 질문.md
@@ -79,15 +79,57 @@
 
       → 동기화 문제가 발생할 수 있음
 
+<br/>
+
+**1.3 프로세스 간 데이터 공유가 힘든 이유?**
+
+데이터 공유가 일어나려면 데이터 공유를 하려는 프로세스들이 동시에 접근 가능한 메모리가 필요하다.
+
+같은 프로세스에서 생성된 스레드는 메모리 공간을 공유하기 때문에 데이터 공유를 위해 따로 해줘야 할 작업이 없다.
+
+그러나 프로세스는 생성되면서 메모리 공간 등을 복사하여 기존 프로세스들과 독립적인 자원을 할당 받는다.
+
+따라서 프로세스들이 동시에 접근할 수 있는 공간과 데이터 공유를 위한 통신 방식 등을 따로 마련해줘야 하기 때문에 데이터 공유가 힘든 것이다.
+
 <br/><br/>
 
 ## 2. 스레드 간 컨텍스트 스위칭은 어떻게 일어나는가?
 
-### 2.1 스레드 간 데이터 공유는 어떻게 일어나는가?
+스레드는 PCB가 아닌 TCB라는 자료구조에 스레드 정보를 저장한다.
+
+- TCB
+    - Thread 별로 존재하는 자료구조
+    - PCB보다 적은 데이터를 가진다.
+
+      → PC, Register Set, PCB를 가리키는 포인터 등
+
+
+![Untitled](./image/img_11.png)
+
+TCB는 PCB에 비해 저장하는 데이터가 적기 때문에 컨텍스트 스위칭을 할 때 현재 프로세스/스레드 상태 정보를 저장하고, CPU에 다음 프로세스/스레드 상태 정보를 재로딩 OS 입장에서는 덜 부담스럽다.
 
 <br/>
 
-### 2.2 스레드 간 스택 영역을 공유하지 않는 이유는 무엇인가?
+또한 스레드 간 컨텍스트 스위칭은 프로세스 간 컨텍스트 스위칭과 달리 가상 메모리 주소 관련 처리 작업을 진행하지 않는다.
+
+같은 프로세스 내의 스레드들은 메모리 영역을 공유하기 때문이다.
+
+따라서, 메모리 주소 관련 처리는 필요없이 CPU 상태 정보만 교체하면 컨텍스트 스위칭이 끝난다.
+
+가상 메모리 주소 관련 처리 작업 중 CPU 캐시와 TLB를 비워주는 작업이 시간을 꽤 잡아먹기 때문에 프로세스 컨텍스트 스위칭이 스레드 컨텍스트 스위칭에 비해 오래 걸리는 것이다.
+
+<br/>
+
+- 스레드 간 컨텍스트 스위칭 시나리오
+    1. 인터럽트 이벤트가 발생하여 TCB0에 T0 스레드의 상태 정보를 저장
+    2. TCB1에서 다음 수행할 T1 프로세스의 상태 정보가 CPU에 재로딩
+    3. T1 프로세스를 CPU 시간만큼 수행
+    4. 인터럽트 이벤트가 발생하여 TCB1에 T1 프로세스의 상태 정보를 저장
+    5. 반복
+
+<br/>
+
+### 2.1 스레드 간 스택 영역을 공유하지 않는 이유는 무엇인가?
 
 스택 영역에는 함수의 호출과 관계되는 지역 변수와 매개변수가 저장되는 영역이다.
 
@@ -98,3 +140,22 @@
 <br/><br/>
 
 ### 3. 컨텍스트 스위칭은 누가 어떻게 관리하는가?
+
+→ OS 커널
+
+- 각종 리소스를 관리/감독하는 역할
+- 컨텍스트 스위칭을 총괄해서 통제권을 가지고 집행/수행하는 존재
+
+  (컨텍스트 스위칭의 발생 트리거가 아님)
+
+
+- 커널
+    - CPU, 메모리 등 컴퓨터에 존재하는 다양한 리소스들을 관리/감독
+
+<br/><br/>
+
+---
+
+## Reference
+
+[https://www.cs.swarthmore.edu/~kwebb/cs45/s18/03-Process_Context_Switching_and_Scheduling.pdf](https://www.cs.swarthmore.edu/~kwebb/cs45/s18/03-Process_Context_Switching_and_Scheduling.pdf)
