(docs) : 2, 3, 4강 내용 추가

--- a/운영체제_쉬운코드/[04강] 동기화, 경쟁 조건, 임계 영역.md
+++ b/운영체제_쉬운코드/[04강] 동기화, 경쟁 조건, 임계 영역.md
@@ -3,6 +3,53 @@
 
 ## 하나의 객체를 두 개의 스레드가 접근할 때 생기는 일
 
+![Untitled](./image/img_12.png)
+
+```java
+for (orange in box) {
+	if (stateOfOrange is bad) {
+		badCounter.increment();
+	}
+}
+
+public class Counter {
+	private int state = 0;
+
+	public void increment() {
+		state++;
+	}
+
+	public int get() {
+		return state;
+	}
+}
+```
+
+![state++ 명령어를 CPU에서 실행할 때](./image/img_13.png)
+
+state++ 명령어를 CPU에서 실행할 때
+
+- 프로그래밍 언어에서 state++는 단일 명령문처럼 보이지만 실제로 CPU에서 실행할 때는 여러 명령문이 합쳐진 복합 명령문이다.
+
+<br/>
+
+- 원했던 결과
+   - T1과 T2가 차례대로 실행하여 state = 2가 되어야 한다.
+- 문제 상황
+   - T1이 두 번째 명령어까지 실행한 상황에서 컨텍스트 스위칭이 일어남
+      - state = 0, R1 = 1
+   - T2가 첫 번째 명령어를 실행
+      - state = 0, R1 = 0
+   - T2가 마지막 명령어까지 모두 실행
+      - state = 1, R1 = 1
+   - 컨텍스트 스위칭이 일어나서 T1의 데이터를 로딩
+      - state = 1, R1 = 1(이때 R1은 T1의 작업 내용을 로딩한 값)
+   - T1가 마지막 명령어를 실행
+      - state = 1
+- 원인
+   - T1과 T2가 메모리를 공유하고 있다.
+   - T1의 작업이 메모리에 반영되기 전에 T2의 작업이 시작되었다.
+
 <br/><br/>
 
 ## 경쟁 조건(race condition)
@@ -26,6 +73,33 @@
 <br/>
 
 ### 어떻게 동기화 시킬 것인가?
+
+```java
+for (orange in box) {
+	if (stateOfOrange is bad) {
+		badCounter.increment();
+	}
+}
+
+public class Counter {
+	private int state = 0;
+
+	public void increment() {
+		state++;
+	}
+
+	public int get() {
+		return state;
+	}
+}
+```
+
+![state++ 명령어를 CPU에서 실행할 때](./image/img_13.png)
+
+컨텍스트 스위칭을 막는 것 자체가 무리이기도 하지만, CPU에서 실행되는 명령어 단위로 컨텍스트 스위칭을 막는 것은 싱글 코어에서만 가능한 해결책이다.
+
+따라서, increment 메소드를 실행할 때 한 번에 하나의 스레드만 실행할 수 있도록 만드는 것이 더 효율적이다.
+
 
 <br/><br/>
 
