(docs) : [05강] 뮤텍스, 세마포어 내용 추가

--- a/운영체제_쉬운코드/[05강] 스핀락, 뮤텍스, 세마포어.md
+++ b/운영체제_쉬운코드/[05강] 스핀락, 뮤텍스, 세마포어.md
@@ -130,12 +130,31 @@ mutex -> unlock();
 
 - CPU atomic 명령어를 사용하고 있다.
 
+<br/>
+
+### 자바에서의 뮤텍스
+
+자바에서 암묵적인 락은 뮤텍스로 동작한다.
+
+- **암묵적인 락**
+    - synchronized 구문으로 제공되는 자바에 내장된 락. 모니터 락이라고도 함
+    - 스레드가 synchronized 블록에 들어가기 전에 자동으로 확보되며 정상적으로든, 예외가 발생해서든 해당 블록을 벗어날 때 자동으로 해제된다.
+
+특정 락으로 보호된 코드 블록은 한 번에 한 스레드만 실행할 수 있기 때문에 같은 락으로 보호되는 synchronized 서로 다른 블록 역시 서로 단일 연산으로 실행된다.
+
+→ 한 스레드가 synchronized 블록을 실행 중이라면 같은 락으로 보호되는 synchronized 블록에 다른 스레드가 들어와 있을 수 없다.
+
+- 동시성 맥락에서 단일 연산 특성이란 트랜잭션의 원자성과 같은 것
+
+  → 일련의 문장이 하나의 나눌 수 없는 단위로 실행되는 것처럼 보인다.
+
 <br/><br/>
 
 ## 뮤텍스가 항상 스핀락보다 좋을까?
 
 멀티 코어 환경이고 critical section에서의 작업이 컨텍스트 스위칭보다 더 빨리 끝난다면 스핀락이 뮤텍스보다 더 이점이 있다.
 
+→ 컨텍스트 스위칭에 필요한 자원의 양이 많고, 락을 확보할 때까지 걸리는 시간이 짧다면 스핀락이 효과적
 - 뮤텍스에서 대기 큐에 있는 스레드를 깨우는 작업 자체가 컨텍스트 스위칭을 발생
 - 싱글 코어에서는 락을 취득하려면 누군가가 쥐고 있는 락을 풀어야하는데 이를 위해 컨텍스트 스위칭이 발생할 수 밖에 없음
 
@@ -171,6 +190,9 @@ mutex -> unlock();
 
   → wait() 와 signal() 이 같은 프로세스/스레드에서 호출될 필요가 없다.
 
+
+- 자원 풀이나 컬렉션의 크기에 제한을 두고자 할 때 유용
+    - 모든 자원을 빌려주고 남아 있는 자원이 없을 때 요청이 들어오는 경우, 다른 스레드가 확보했던 자원을 반납받아 사용할 수 있을 때까지 대기하도록 함
 <br/>
 
 ### 예제
@@ -213,11 +235,82 @@ semaphore -> signal();
 
   → 카운팅 세마포어
 
+    - 특정 자원이나 특정 연산을 동시에 사용하거나 호출할 수 있는 스레드의 수를 제한하고자 할 때 사용
+
+
 - 세마포어도 mutual exclusion을 보장할 수 있도록 만들 수 있다.
 
   → `value -= 1` → `value = 0`, `value += 1` → `value = 1`로 변경
 
   → 이진(binary) 세마포어
+
+    - 초기 퍼밋 값이 1로 지정된 카운팅 세마포어
+    - 비재진입 락의 역할을 하는 뮤텍스로 활용 가능
+
+      → 이진 세마포어의 퍼밋을 갖고 있는 스레드가 뮤텍스를 확보한 것
+
+<br/>
+
+### 자바에서의 세마포어
+
+세마포어는 동기화 클래스이다.
+
+- 동기화 클래스
+    - 상태 정보를 사용해 스레드 간의 작업 흐름을 조절할 수 있도록 만들어진 클래스
+    - 특성
+        - 동기화 클래스에 접근하려는 스레드가 어느 경우에 통과하고 어느 경우에는 대기하도록 멈추게 해야 하는지를 결정하는 상태 정보를 갖고 있다.
+        - 위에서 설명한 상태를 변경할 수 있는 메소드를 제공한다.
+        - 동기화 클래스가 특정 상태에 진입할 때까지 효과적으로 대기할 수 있는 메소드를 제공한다.
+    - ex) 세마포어, 배리어, 래치 등
+
+<br/>
+
+`Semaphore` 클래스의 내부 동작 원리는 다음과 같다.
+
+- 가상의 퍼밋(permit)을 만들어 내부 상태를 관리
+- `Semaphore`를 생성할 때 생성 메소드에 최초로 생성할 퍼밋의 수를 넘겨준다.
+- 외부 스레드는 퍼밋을 요청해 남은 퍼밋이 있다면 확보하거나, 이전에 확보한 퍼밋을 반납한다.
+- 현재 사용할 수 있는 퍼밋이 없는 경우
+    - `acquire()` → 남는 퍼밋이 생기거나, 인터럽트가 걸리거나, 지정한 시간을 넘겨 타임아웃이 걸리기 전까지 대기
+    - `release()` → 확보했던 퍼밋을 다시 세마포어에게 반납
+
+<br/>
+
+따라서, `Semaphore` 클래스를 사용하면 어떤 클래스라도 크기가 제한된 컬렉션 클래스로 활용 가능하다.
+
+- ex) `BoundedHashSet`
+
+    ```java
+    public class BoundedHashSet<T> {
+    	private final Set<T> set;
+    	private final Semaphore sem;
+    
+    	public BoundedHashSet(int bound) {
+    		this.set = Collections.synchronizedSet(new HashSet<T>());
+    		sem = new Semaphore(bound);    // 해당 컬렉션 클래스가 가질 수 있는 최대 크기의 숫자로 초기화
+    	}
+    
+    	public boolean add(T o) throws InterruptedException {
+    		sem.acquire();    // 내부 데이터 구조에 추가할 여유가 있는지 확인
+    		boolean wasAdded = false;
+    		try {
+    			wasAdded = set.Add(o);
+    			return wasAdded;
+    		}
+    		finally {
+    			if (!wasAdded)      // 값을 추가하지 못한 경우
+    				sem.release();    // 세마포어에 퍼밋 반납
+    		}
+    	}
+    
+    	public boolean remove(Object o) {
+    		boolean wasRemoved = set.remove(o);
+    		if (wasRemoved)     // 객체 삭제에 성공하면
+    			sem.release();    // 세마포어에 퍼밋 반납
+    		return wasRemoved;
+    	}
+    }
+    ```
 
 <br/><br/>
 
