(docs) : 운영체제_쉬운코드 [06강] 모니터-3

--- a/운영체제_쉬운코드/[06강] 모니터.md
+++ b/운영체제_쉬운코드/[06강] 모니터.md
@@ -125,6 +125,95 @@ public method consumer() {
 }
 ```
 
+<br/>
+
+1. consumer 스레드 C1이 먼저 시작: `lock.acquire()`
+
+![Untitled](./image/img_16.png)
+
+2. producer 스레드 P1도 시작: `lock.acquire()`
+    - 이미 C1이 락을 가지고 있으므로 entry queue에서 대기
+
+![Untitled](./image/img_17.png)
+
+3. C1: `wait(lock, emptyCV)`
+    - 현재 버퍼가 비어있으므로 emptyCV가 가지고 있는 waiting queue에서 대기
+    - 가지고 있던 락을 반환
+
+![Untitled](./image/img_18.png)
+
+4. P1: `q.enqueue(myTask)`
+    - 락을 획득하여 로직 진행
+    - 버퍼가 비어있으므로 while 문에 진입하지 않음
+
+![Untitled](./image/img_19.png)
+
+5. P1: `signal(emptyCV)`
+    - waiting queue에서 대기하고 있던 C1을 깨움
+    - 이때 다음 로직을 실행하는 두 가지 방식
+        1. `signal and continue` : `signal()` 을 실행한 스레드(P1)가 그대로 이어서 로직을 진행하는 방식
+        2. `signal and wait` : `signal()` 을 실행한 스레드(P1)는 대기하고 방금 깬 스레드(C1)가 로직을 진행하는 방식
+
+      → 여기서는 1번 방식으로 진행
+
+
+![Untitled](./image/img_20.png)
+
+6. C1
+    - 깨어났으나 락을 가지고 있지 않기 때문에 다시 entry queue에서 대기
+
+![Untitled](./image/img_21.png)
+
+7. producer 스레드 P2와 consumer 스레드 C2도 시작
+    - 락을 획득할 수 없으므로 두 스레드 모두 entry queue에서 대기
+
+![Untitled](./image/img_22.png)
+
+8. P1: `lock.release()`
+
+![Untitled](./image/img_23.png)
+
+9. C2: 락 획득
+    - 어떤 스레드가 먼저 락을 획득할 것인가는 구현에 따라 다름
+        - 먼저 기다리고 있던 C1에 우선순위를 높이는 방식
+        - 대기 순서 상관없이 entry queue에 들어있는 모든 스레드에 공평하게 기회를 주는 방식 등
+
+![Untitled](./image/img_24.png)
+
+10. C2: `q.dequeue()`
+    - 버퍼에 아이템이 들어있으므로 while 문에 진입하지 않음
+
+![Untitled](./image/img_25.png)
+
+11. C2: `signal(fullCV)`
+    - waiting queue에서 대기하고 있는 스레드가 있다면 깨우지만 현재는 없으므로 아무 일도 일어나지 않음
+
+12. C2: `lock.release()` , `doStuff(myTask)`
+    - 락을 반환하고 버퍼에서 얻은 아이템으로 나머지 로직 실행
+
+![Untitled](./image/img_26.png)
+
+13. C1: 락 획득
+
+![Untitled](./image/img_27.png)
+
+14. C1: `wait(lock, emptyCV)`
+    - 대기 전 while 문에서 중단되었으므로 다시 while 문부터 시작
+    - 하지만 아까와 마찬가지로 버퍼가 비어있으므로 다시 waiting queue에서 대기
+
+![Untitled](./image/img_28.png)
+
+15. P2: 락을 획득한 후 P1처럼 로직 진행
+16. C1: 락을 획득하고, P2가 생성한 아이템을 가지고 C2처럼 로직 진행
+
+<br/>
+
+이처럼 락을 획득하고 다음 로직을 실행하기 까지는 많은 일들이 일어난다.
+
+락을 획득할 당시에는 조건이 충족되었지만 막상 로직을 실행할 때는 조건이 만족되지 않은 상황일 수도 있고, OS에 따라서는 대기 상태에 있던 스레드가 갑자기 깨어날 수도 있다.
+
+따라서, 락 획득과 조건 충족이 동시에 만족되어야 하기 때문에 wait 문은 while 루프 안에서 호출되어야 한다.
+
 <br/><br/>
 
 ## 자바에서 모니터란
