--- a/운영체제_쉬운코드/[05강] 꼬리 질문.md
+++ b/운영체제_쉬운코드/[05강] 꼬리 질문.md
@@ -37,4 +37,14 @@ Atomic 클래스는 동기화가 되어 있는 변수를 제공하며, 변수를
 
 ## 2. **세마포어는 여러 스레드/프로세스가 공유자원에 접근할 수 있게 되면 크리티컬 섹션의 정의가 무너지는 것이 아닐까?**
 
+세마포어의 경우를 예외로 보는 것이 좋다.
+
+기본적으로 critical section의 개념은 하나의 프로세스나 스레드만 접근 가능한 영역이다.
+
+그러나 세마포어는 좀 특별해서, 제한된 수의 스레드나 프로세스가 동시에 크리티컬 섹션 영역에서 실행될 수 있도록 허용하기 때문에 세마포어만 구별해서 critical section의 개념을 조금 더 확장해서 이해하는게 좋다.
+
+<br/><br/>
+
 ## 3. **세마포어는 여러 스레드/프로세스가 공유자원에 접근할 수 있게 하면서 어떻게 상호 배제를 지키는걸까?**
+
+## 4. 이진 세마포어도 하나의 스레드/프로세스만 접근할 수 있는 것 같은데 뮤텍스와 달리 누가 락을 해제할 수 있는지 알 수 없는걸까?
