--- a/운영체제_쉬운코드/[05강] 스핀락, 뮤텍스, 세마포어.md
+++ b/운영체제_쉬운코드/[05강] 스핀락, 뮤텍스, 세마포어.md
@@ -69,6 +69,9 @@ T1, T2가 코드를 실행할 때
 
       → CPU 레벨에서 알아서 동기화하여 한 번에 한 프로세스/스레드만 실행하게 함
 
+위의 예제를 예로 들면, 어떤 스레드가 TestAndSet()를 수행하고 있다면 그 안에서 사용되는 변수(lockPtr)에 대해 다른 프로세스나 스레드가 외부에서 같은 변수(lock)를 사용하는 것을 허용하지 않는다.
+
+<br/>
 
 TestAndSet 함수는 중간에 컨텍스트 스위칭으로 인해 다른 스레드가 실행될 일이 없다.
 
@@ -78,7 +81,7 @@ TestAndSet 함수는 중간에 컨텍스트 스위칭으로 인해 다른 스레
 
 ### 단점
 
-락을 기다리는 동안 무한 루프를 돌며 락을 획득할 수 있는지 계속해서 확인하기 때문에 CPU를 낭비한다.
+락을 기다리는 동안 대기 상태로 바뀌지 않고 무한 루프를 돌며 락을 획득할 수 있는지 계속해서 확인하기 때문에 CPU를 낭비한다.
 
 <br/><br/>
 
@@ -92,8 +95,8 @@ TestAndSet 함수는 중간에 컨텍스트 스위칭으로 인해 다른 스레
 
 ```java
 class Mutex {
-	int value = 1;    // value 값을 취득 -> 락을 획득
-	int guard = 0;    // race condition이 발생할 수 있는 value 값을 critical section 내에서 안전하게 변경할 수 있도록 하는 장치
+	volatile int value = 1;    // value 값을 취득 -> 락을 획득
+	volatile int guard = 0;    // race condition이 발생할 수 있는 value 값을 critical section 내에서 안전하게 변경할 수 있도록 하는 장치
 }
 
 Mutex::lock() {
@@ -124,9 +127,21 @@ mutex -> lock();
 mutex -> unlock();
 ```
 
+- `guard` **를 사용하는 이유**
+
+  → 락을 쓰는 이유는 여러 프로세스/스레드가 같은 데이터에 동시에 접근할 때 데이터를 안전하게 읽거나 쓰기 위해 mutual exclusive하게 접근할 수 있도록 하는 것이다. 그렇다면 critical section을 만들기 위해 사용되는 락 또한 여러 프로세스/스레드가 동시에 접근할 수 있기 때문에 락의 값(`value`)를 바꿔주는 것도 mutual exclusive하게 처리되어야 한다. 그렇지 않다면 예제에서 `value` 값을 의도와 다르게 읽을 수 있고 그럼 뮤텍스 락의 메커니즘이 깨질 수 있기 때문이다. `guard` 의 동시성은 atomic한 함수(`test_and_set`)를 사용하여 보장한다.
+
+<br/>
+
 - 스핀락과 다르게 락을 획득할 때까지 무한루프를 돌지 않고 큐에서 대기를 한다.
 
   → CPU 사이클 낭비를 최소화 시킴
+
+    - **while 문을 계속 도는 것 자체가 스핀락이 발생하는 것이 아닌가?**
+
+      → "뮤텍스 락을 취득할 수 없다면 그 스레드는 잠들어서 대기상태로 머물게 한다"는 것이 뮤텍스의 핵심이기 때문에, 뮤텍스의 올바른 동작을 보장하기 위해 상대적으로 매우 짧은 찰나의 spinning을 피할 순 없지만, 그렇다고 이 자체를 스핀락이라고는 부르지 않는다.
+
+<br/>
 
 - CPU atomic 명령어를 사용하고 있다.
 
@@ -199,8 +214,9 @@ mutex -> unlock();
 
 ```java
 class Semaphore {
-	int value = 1;    // value 값을 취득 -> 락을 획득
-	int guard = 0;    // race condition이 발생할 수 있는 value 값을 critical section 내에서 안전하게 변경할 수 있도록 하는 장치
+	volatile int value = 1;    // value 값을 취득 -> 락을 획득
+                               // 뮤텍스와 달리 값을 2, 3, 4 등으로 줄 수 있고, 그 수만큼 여러 프로세스/스레드들이 critical section으로 들어갈 수 있음
+	volatile int guard = 0;    // race condition이 발생할 수 있는 value 값을 critical section 내에서 안전하게 변경할 수 있도록 하는 장치
 }
 
 Semaphore::wait() {
@@ -324,9 +340,33 @@ semaphore -> signal();
 
 - 세마포어에서는 wait()와 signal()을 호출하는 프로세스/스레드가 다를 수 있다.
 
-뮤텍스는 priority inheritance 속성을 가지지만 세마포어는 없다.
+<br/>
+
+뮤텍스는 priority inheritance 속성을 가지지만 세마포어는 누가 락을 해제할 수 있을지 알 수 없기 때문에 갖고 있지 않다.
 
 - priority inheritance
-- 세마포어는 누가 락을 해제할 수 있을지 알 수 없기 때문
+    - 스케쥴링을 하는 방식 중에 프로세스/스레드의 우선 순위가 더 높은 순으로 실행시키는 방식이 있다.
+        - 스케쥴링
+
+          : 여러 프로세스/스레드가 동시에 실행할 때 CPU에서 컨텍스트 스위칭이 발생해서 누구를 먼저 실행시킬지를 정하는 것
+
+    - 이때 같은 자원에 대해 경합을 하게 되어 서로 락을 획득하려고 하다 보면 다음과 같은 상황이 발생한다.
+        - 우선 순위가 낮은 프로세스(P2)가 락을 쥐고 있으면 우선 순위가 높은 프로세스(P1)는 P2에 의존하게 되어 우선 순위가 더 높아도 P1은 아무것도 못하고 기다리기만 하게 된다.
+        - 이때 우선 순위가 높은 또다른 프로세스들이 존재한다면 P2는 실행 순서가 늦어지게 되고 P1의 대기 시간은 더욱 길어진다.
+    - 이 문제를 뮤텍스는 P2의 우선순위를 P1만큼 높여서 P2를 빠르게 critical section에서 빠져나오게끔 한다. 이것이 바로 priority inheritance이다.
+
+<br/>
 
 상호 배제만 필요하다면 뮤텍스를, 작업 간의 실행 순서의 동기화가 필요하다면 세마포어를 권장
+
+<br/><br/><br/>
+
+---
+
+## QnA
+
+### 1. 서로 다른 프로세스에서 공통적으로 접근하는 공유 자원에는 어떤 것들이 있나요?
+
+서로 다른 프로세스라면, 보통 서로 다른 프로그램 코드를 갖게 될 것이고, 그 경우에는 서로 다른 프로그램코드 상에서 동일한 객체 또는 변수를 공유하는 상황이 많이 없을 것 같습니다.
+
+-> 프로세스의 경우 shared memory 기법이 있어서 서로 다른 프로세스가 공유할 메모리를 지정해서 그 메모리를 같이 사용할 수 있습니다.
