--- a/운영체제_쉬운코드/[05강] 꼬리 질문.md
+++ b/운영체제_쉬운코드/[05강] 꼬리 질문.md
@@ -48,3 +48,45 @@ Atomic 클래스는 동기화가 되어 있는 변수를 제공하며, 변수를
 ## 3. **세마포어는 여러 스레드/프로세스가 공유자원에 접근할 수 있게 하면서 어떻게 상호 배제를 지키는걸까?**
 
 ## 4. 이진 세마포어도 하나의 스레드/프로세스만 접근할 수 있는 것 같은데 뮤텍스와 달리 누가 락을 해제할 수 있는지 알 수 없는걸까?
+
+(참고: [https://www.geeksforgeeks.org/difference-between-binary-semaphore-and-mutex/](https://www.geeksforgeeks.org/difference-between-binary-semaphore-and-mutex/))
+
+이 부분은 이진 세마포어와 뮤텍스의 차이점에 대해 알아보면 알 수 있다.
+
+<br/>
+
+### 이진 세마포어
+
+이진 세마포어는 0과 1만 가질 수 있는 세마포어다.
+
+mutual exclusion을 위한 신호 메커니즘을 사용하여 락을 구현하는 데 사용된다.
+
+세마포어의 값이 0이면 락이 잠겨져 있으므로 사용할 수 없고, 값이 1이면 락이 잠겨져 있지 않으므로 사용할 수 있다.
+
+<br/>
+
+### 뮤텍스
+
+뮤텍스도 잠금 메커니즘으로 mutual exclusion를 제공한다.
+
+어떤 스레드가 뮤텍스 락을 획득하면 locked 값을 가지게 되고, 락을 반환하면 unlocked 값을 가지게 된다.
+
+어떤 시점에서든 한 번에 하나의 스레드만 전체 버퍼를 가지고 작업할 수 있다.
+
+<br/>
+
+### 이진 세마포어 vs 뮤텍스
+
+| 이진 세마포어 | 뮤텍스 |
+| --- | --- |
+| 신호 메커니즘에 기반한 기능 | 잠금 메커니즘에 기반한 기능 |
+| 현재 스레드보다 우선순위가 높은 스레드라면 이진 세마포어를 해제하고 잠금을 사용할 수 있다. | critical section에서 뮤텍스를 획득한 스레드만 뮤텍스를 해제할 수 있다. |
+| 세마포어 값은 wait() 및 signal() 작업에 따라 변경된다. | 뮤텍스 값은 locked 또는 unlocked로 변경된다. |
+| 여러 개의 스레드가 동시에 이진 세마포어를 동시에 획득할 수 있다. | 한 번에 하나의 스레드만 뮤텍스를 획득할 수 있다. |
+| 이진 세마포어에는 소유권이 없다. | 뮤텍스에는 소유권이 있으며 소유자만 잠금을 해제할 수 있다. |
+| 다른 스레드/프로세스가 이진 세마포어를 잠금 해제할 수 있기 때문에 더 빠르다. | 뮤텍스는 획득한 스레드만 잠금을 해제할 수 있으므로 이진 세마포어보다 느리다. |
+| 리소스 인스턴스가 여러 개 있는 경우 이진 세마포어를 사용하는 것이 좋다. | 리소스 인스턴스가 하나인 경우 뮤텍스를 사용하는 것이 좋다. |
+
+즉, 뮤텍스는 이진 세마포어와 달리 ‘소유’ 라는 개념이 존재하기 때문에 누가 락을 해제할 수 있을지 특정 가능한 것이다.
+
+또한 이진 세마포어는 여러 스레드/프로세스가 동시에 획득할 수 있고, 현재 이진 세마포어를 차지한 스레드보다 우선 순위가 높은 스레드라면 이진 세마포어를 해제할 수 있기 때문에 누가 락을 해제할 수 있을지 예측할 수 없는 것이다.
