--- a/운영체제_쉬운코드/[06강] 모니터.md
+++ b/운영체제_쉬운코드/[06강] 모니터.md
@@ -4,7 +4,14 @@
 ## 모니터(monitor)
 
 - mutual exclusion을 보장
+
+  → critical section을 보장
+
 - 조건에 따라 스레드가 대기 상태로 전환하는 기능을 제공
+
+  → critical section 내에서 작업을 하다가 어떤 특정 조건이 만족할 때 까지 대기하고 싶을 때 대기할 수 있음
+
+  (뮤텍스나 세마포어에서는 제공하지 않는 기능)
 
 <br/>
 
@@ -199,6 +206,7 @@ public method consumer() {
 
 14. C1: `wait(lock, emptyCV)`
     - 대기 전 while 문에서 중단되었으므로 다시 while 문부터 시작
+      - 스레드 별로 PC를 가지고 있기 때문에 가능
     - 하지만 아까와 마찬가지로 버퍼가 비어있으므로 다시 waiting queue에서 대기
 
 ![Untitled](./image/img_28.png)
@@ -292,3 +300,19 @@ public class Main {
 	}
 }
 ```
+
+<br/><br/><br/>
+
+---
+
+## QnA
+
+### 1. 뮤텍스 락이 해제 될 때 entry queue에 있는 스레드 중에 하나를 깨운다고 했는데 이때 일어난 스레드가 뮤텍스 락을 얻기 전에 새롭게 진입한 다른 스레드가 락을 가로챌 수도 있는가?
+
+-> 그렇다. 새롭게 진입한 다른 스레드가 락을 가로챌 수 있다.
+
+모니터의 뮤텍스 락에서 관리되는 queue(모니터에서는 entry queue 혹은 entry set이라고 부르는 queue)에서 깨어난 스레드 A는 CPU에서 이어서 실행되기 위해 OS에서 관리하는 ready queue에서 대기한다.
+
+하지만 만약 새로운 스레드 B가 모니터의 뮤텍스 락을 취득하기 직전의 상태로 ready queue에서 대기하고 있었다면, 이때 OS 스케줄러가 어떤 선택을 하는지에 따라 스레드 A가 아니라 스레드 B가 먼저 CPU에서 실행될 수 있고, 그럼 B가 모니터의 뮤텍스 락을 취득하고 실행하게 된다.
+
+결국 A가 CPU에서 실행됐을 때는 B가 모니터의 뮤텍스 락을 취득한 상태이기 때문에 다시 모니터의 entry queue에 들어가게 되는 것이다.
