--- a/운영체제_쉬운코드/[05강] 스핀락, 뮤텍스, 세마포어.md
+++ b/운영체제_쉬운코드/[05강] 스핀락, 뮤텍스, 세마포어.md
@@ -69,15 +69,19 @@ T1, T2가 코드를 실행할 때
 
       → CPU 레벨에서 알아서 동기화하여 한 번에 한 프로세스/스레드만 실행하게 함
 
-위의 예제를 예로 들면, 어떤 스레드가 TestAndSet()를 수행하고 있다면 그 안에서 사용되는 변수(lockPtr)에 대해 다른 프로세스나 스레드가 외부에서 같은 변수(lock)를 사용하는 것을 허용하지 않는다.
+위의 예제를 예로 들면, 어떤 스레드가 test_and_set()를 수행하고 있다면 그 안에서 사용되는 변수(lockPtr)에 대해 다른 프로세스나 스레드가 외부에서 같은 변수(lock)를 사용하는 것을 허용하지 않는다.
 
 <br/>
 
-TestAndSet 함수는 중간에 컨텍스트 스위칭으로 인해 다른 스레드가 실행될 일이 없다.
+또한 test_and_set 함수는 중간에 컨텍스트 스위칭으로 인해 다른 스레드가 실행될 일이 없다.
 
-멀티 코어 환경에서 두 개의 스레드가 TestAndSet 함수를 동시에 실행시키려 해도 CPU 레벨에서 하나의 스레드의 실행이 끝난 후에 다른 스레드가 실행하도록 컨트롤한다.
+멀티 코어 환경에서 두 개의 스레드가 test_and_set 함수를 동시에 실행시키려 해도 CPU 레벨에서 하나의 스레드의 실행이 끝난 후에 다른 스레드가 실행하도록 컨트롤한다.
 
 <br/>
+
+만약 test_and_set()이 원자적으로 동작하지 않는다면, 두 스레드에서 모두 0을 리턴하는 경우가 발생할 수 있다.
+
+이렇게 되면 critical section에 두 개의 스레드가 모두 진입하게 되어 mutual exclusion이 깨지고, 동기화는 정상적으로 동작하지 않는다.
 
 ### 단점
 
