--- a/운영체제_쉬운코드/[08강] OS 프로세스 상태, 자바 스레드 상태.md
+++ b/운영체제_쉬운코드/[08강] OS 프로세스 상태, 자바 스레드 상태.md
@@ -10,14 +10,33 @@
 <br/>
 
 1. 처음 프로세스가 생성되면 new 상태로 시작
-2. new 상태로 기다리고 있다가 long term scheduler가 허락을 해주면 ready 상태가 되어 CPU에서 실행될 준비를 한다.
-    - 위의 설명은 real time OS 같은 특수한 상황에서 일어나는 것이고 보통 컴퓨터들은 long term scheduler가 따로 없기 때문에 처음 프로세스가 생성되면 바로 ready 상태가 된다고 보면 됨
-3. 스케쥴러에 의해 자신의 차례가 되면 running 상태로 바뀌어 CPU에서 실행된다.
-4. 자신에게 할당된 타임 슬라이스를 다 쓰면 다시 ready 상태가 된다.
-5. running 상태에서 I/O 작업을 들어가게 되거나, critical section에 진입하려고 하는데 먼저 진입한 다른 프로세스가 있어 기다려야 할 때 waiting 상태로 변경된다.
-6. I/O 작업을 완료하거나 critical section에 진입할 수 있게 되면 ready 상태로 변경된다.
-    - 아직 CPU에서 다른 프로세스가 실행 중일 것이므로 바로 running 상태가 되지 않는다.
-7. 스케쥴러에 의해 다시 running 상태가 되어 실행하다가 작업을 완료하면 terminated 상태로 된다.
+2. NEW → READY
+    - 일반적으로 사용하는 컴퓨터의 경우에는 프로세스가 생성되면 바로 READY 상태가 된다고 보면 된다.
+    - 과거에는 프로세스가 생성된 후에 long term scheduler가 허락을 해야 READY 상태로 전이가 되어 CPU에서 실행될 준비를 했다.
+    - 오늘날에는 보통 멀티태스킹 환경이고, long term scheduler가 따로 없기 때문에 real time OS 같은 특수한 상황이 아니라면 바로 READY 상태가 된다.
+3. READY → RUNNING
+    - READY 상태가 된 프로세스들은 ready queue에서 CPU 사용권을 얻을 때까지 대기한다.
+    - CPU scheduler는 대기하던 프로세스 중 하나를 선택해서 CPU 사용권을 주고(dispatch), 선택된 프로세스는 CPU에서 실행되는 RUNNING 상태로 전이된다.
+4. RUNNING → READY
+    - CPU에서 RUNNING 상태로 실행 중이던 프로세스는 다양한 이유로 다시 READY 상태로 전이된다.
+        - 자신에게 할당된 타임 슬라이스를 다 썼거나
+        - 그 외 이벤트(interrupt)를 받아서 다시 준비(READY) 상태로 돌아가야 하거나
+        - 다른 대기 프로세스들에게 실행 기회를 주기 위해 자발적으로 CPU에서 실행을 중단하게 되거나
+        - …
+5. RUNNING → WAITING
+    - CPU에서 RUNNING 상태로 실행 중이던 프로세스는 다음과 같은 상황이 오면 WAITING 상태로 전이된다.
+        - I/O 작업을 해야해서 I/O 작업 요청 후에 그 결과를 기다려야 하거나
+        - critical section에 진입하려고 하는데 먼저 진입한 다른 프로세스가 있어 기다려야 하거나
+        - 다른 프로세스가 사용 중인 리소스(가령 프린터)를 기다려야 하거나
+        - …
+6. WAITING → READY
+    - I/O 작업을 완료하거나 critical section에 진입할 수 있게 되거나 리소스를 사용할 수 있을 때 다시 READY 상태로 전이된다.
+        - 아직 CPU에서 다른 프로세스가 실행 중일 가능성이 있기 때문에 바로 RUNNING 상태가 되지 않는다.
+7. RUNNING → TERMINATED
+    - 프로세스가 종료되려면 RUNNING 상태가 되어야 한다.
+    - CPU scheduler에 의해 다시 RUNNING 상태가 되어 실행하다가 작업을 완료하면 TERMINATED 상태가 된다.
+
+<br/>
 
 스레드는 프로세스의 메모리를 공유하기 때문에 스레드의 상태 또한 프로세스의 상태와 거의 비슷하다.
 
