--- a/운영체제_쉬운코드/[05강] 꼬리 질문.md
+++ b/운영체제_쉬운코드/[05강] 꼬리 질문.md
@@ -46,6 +46,12 @@ Atomic 클래스는 동기화가 되어 있는 변수를 제공하며, 변수를
 <br/><br/>
 
 ## 3. **세마포어는 여러 스레드/프로세스가 공유자원에 접근할 수 있게 하면서 어떻게 상호 배제를 지키는걸까?**
+(참고: [https://www.youtube.com/watch?v=CitsUz-Dx7A&list=PLBrGAFAIyf5rby7QylRc6JxU5lzQ9c4tN&index=17](https://www.youtube.com/watch?v=CitsUz-Dx7A&list=PLBrGAFAIyf5rby7QylRc6JxU5lzQ9c4tN&index=17))
+
+![Untitled](./image/img_29.png)
+
+![Untitled](./image/img_30.png)
+
 
 ## 4. 이진 세마포어도 하나의 스레드/프로세스만 접근할 수 있는 것 같은데 뮤텍스와 달리 누가 락을 해제할 수 있는지 알 수 없는걸까?
 
