(docs) : 운영체제_쉬운코드 [10강] 유저 모드, 커널 모드, 인터럽트, 시스템 콜-2

--- a/운영체제_쉬운코드/[10강] 유저 모드, 커널 모드, 인터럽트, 시스템 콜.md
+++ b/운영체제_쉬운코드/[10강] 유저 모드, 커널 모드, 인터럽트, 시스템 콜.md
@@ -78,3 +78,26 @@
 프로그래밍 언어에서 시스템 콜을 직접 호출하지 않고도 파일 I/O, 네트워크 I/O, 프로세스/스레드 관련 작업 등을 할 수 있었던 이유는 프로그래밍 언어들이 시스템 콜을 포장하여 간접적으로 사용할 수 있도록 제공했기 때문이다.
 
 - JAVA의 경우 JNI(Java Native Interface)를 제공
+
+<br/><br/>
+## 시스템 콜 & 인터럽트 예제: 파일 read
+
+- single core CPU
+- T1 → RUNNING / T2 → READY
+
+![Untitled](./image/img_31.png)
+
+- `3. 파일을 읽을 준비 → T1을 WAITING 상태로 전이`
+    - read system call은 block system call이기 때문에 T1이 파일을 읽을 준비가 될 때까지 기다려야 하기 때문에 T1의 상태를 WAITING으로 변경한다.
+- `4. T2를 RUNNING 상태로 전이`
+    - CPU에서 현재 실행 중인 프로세스/스레드가 없기 때문에 스케줄링을 통해 대기하고 있던 T2의 상태를 RUNNING 상태로 바꾸고 CPU에서 실행될 준비를 한다.
+
+![Untitled](./image/img_32.png)
+- `6. interrupt 발생`
+    - SSD 쪽에서 T1이 요청했던 파일을 읽을 준비가 완료되었다는 interrupt를 발생
+- `8. T1을 READY 상태로 전이`
+    - 파일이 준비가 되었기 때문에 다음 스케줄링에서 선택을 받아 CPU에서 실행되어야 하기 때문
+
+![Untitled](./image/img_33.png)
+- `11. interrupt 발생`
+    - T2가 주어진 타임 슬라이스를 다 썼다면 timer가 이를 알려주기 위해 interrupt를 발생
