(docs) : 우아한테크세미나 2023.03 - "덕업일치를 넘어서"에서 하고 싶었던 이야기

--- a/Etc/우아한테크세미나202303.md
+++ b/Etc/우아한테크세미나202303.md
@@ -148,11 +148,54 @@ SQL 보다는 애플리케이션에서 값을 다룬다.
 
 ## "덕업일치를 넘어서"에서 하고 싶었던 이야기 – 컬리 박성철
 
-소프트웨어로 사람들에게 도움이 되자
+### 프로그래머로서의 전문성
 
-협력 중심 개발 → 애자일
+> 💡 지식 근로자는 **스스로 성과의 방향을 설정**해야 하기 때문에 **자신에게 어떤 성과가 기대되고 있는지** 그리고 자신에게 **그러한 성과가 기대되고 있는 이유가 무엇인지**를 이해하지 않으면 안된다. -피터 드러커
 
-- 동기가 부여된 개인들 중심으로 프로젝트를 구성하라
+- 전문가 = 성과의 주체 = 자기 경영 능력을 가진 지식 근로자
+- 전문가 = 역량 x 동기 x 방향(cos ⍬) x 협력
+    - 역량 = 전문 역량(CS + 소프트웨어 공학) + 일반 역량(소통, 분석, 끈기, 집중, 돌파, 관계, 자기 관리, … 등)
+    - 동기 x 방향(cos ⍬) x 협력 → 동적 요소
+
+<br/>
+
+### 왜 전문가가 되어야 하는가?
+
+> 💡 골드 러시 이후 소프트웨어 개발은 보다 체계적이고, 위험이 낮으며, 자본 집약적인 개발 관행이 특징이다. 골드 러시 방식 개발 관행은 후기 골드 러시 단계에서 동작하지 않을 것이다. - 스티브 맥코넬
+
+→ 우리는 황금기를 즐기기보다는 추운 겨울을 대비해야 한다.
+
+<br/>
+
+### 제 3의 답 - 협력 중심 개발
+
+- 장인 정신은 개인을 너무 강조한다.
+- 소프트웨어 공학은 개발자를 대상화한다. → 개발자를 관리 대상으로만 본다.
+- 애자일 → 협력 중심 개발, 팀 개발
+    - 전문성을 가진 개인들이 같이 협력해서 결과를 같이 만들어냄
+    - 동기가 부여된 개인들 중심으로 프로젝트를 구성하라. 그들이 필요로 하는 환경과 지원을 주고 그들이 일을 끝내리라고 신뢰하라.
+    - 최고의 아키텍처, 요구사항, 설계는 자기 조직적인 팀에서 창발한다.
+    - 팀은 정기적으로 어떻게 더 효과적이 될지 숙고하고, 이에 따라 팀의 행동을 조율하고 조정한다.
+
+<br/>
+
+### 나를 잃어버리지 않는 삶
+
+전문가는 단순히 스펙을 채워서 되는 것이 아니라 나를 경영하는 사람이어야 한다.
+
+나를 경영하려면 자기 자신을 움직여야 하고 성장을 위해 노력해야 한다.
+
+이를 위해서는 내가 누군지 알고, 나를 온전히 받아들여야 한다.
+
+<br/>
+
+### 자기 동기 관리
+
+> 💡 내재 동기를 개발하고 고양하는 데 관심이 있는 사람이라면 금전적인 보상처럼 외부에서 통제되는 체제에 집중해서는 안된다. - 에드워드 디씨
+
+동기는 부여되지 않는다.
+
+계속해서 내가 뭘 좋아하고 어떤 것을 하고 싶어하는지 고민해야 한다.
 
 <br/><br/>
 
